--- a/UPLD/倪海厦_天纪004_64卦图解.md
+++ b/UPLD/倪海厦_天纪004_64卦图解.md
@@ -219,7 +219,7 @@ tags:
 
 那巨富的人再逢到巨门星入庙的时候，代表他豪门宅第。如果生下来就是巨门入庙，禄马交驰在命，那就是豪门世家里面。你千万不要给他批出来，生下来就在牢里。不要批错了，入庙嘛。同一颗星他代表的意义不一样。
 
-## 七、卦辞和象
+## 七、六十四卦
 
 ### （一）六爻详解
 
@@ -262,13 +262,13 @@ tags:
 
 如果是宰这个阶段的人，来找你呢，你告诉他，要见机而动，见时而动，这个时，就是我刚才讲的，外地会比本地好；如果是初爻这个时机来找你的，你告诉他，好好地进修，然后参加考试，准备进入第二个阶段；那来找你的人，不一定是哪一个阶段，还有你自己知道自己面临哪个阶段，要知道是什么时候，要怎么做。
 
-### （二）六十四卦图解
+### （二）乾为天
 
 下面介绍六十四卦，每个卦都有爻变，比如说我们乾为天，你如果按照这个原理来做事情，你就是乾为天，了解我的意思吧，懂不懂我的意思。比如说我们有一个卦，天地否，你如果按照天地否的每个爻的方式来做，你就否了，可能还要加个病，痞子了。
 
 所以我们研究易经八卦，可以让自己变成那个卦，也可以那个人变成那个卦，然后看到这个人在什么状态之下，我们就知道他目前处在哪一个卦的第几爻，然后从这个爻要往上走，如何从这个爻，从这个卦，让他变成地天泰，或者火天大有，或者是进入乾为天，一下，你的念就改过来了。这就是易经。所以我们讲易经的时候，从乾为天第一个讲，第一个这是天的性，天的定位，再来讲坤为地，天地定位，然后开始循环了，就好像手表一样，一分两分，那如果你走到25分，如何变成，我们马上就看到了，你会变成什么，然后就是26，27,28，我们就看到了，这就是我们要学的东西。就是站在外面看到里面藏什么。
 
-#### 1.乾为天 [䷀]
+#### 1.读图
 
 ![乾为天](https://preview.cloud.189.cn/image/imageAction?param=9009257B37F34902A1D93BBF9621A156C414767E6DAD7F02FC41BD7AF0A87EFBBD3D7D44129D5D5A70B212C25F4AD83C49F4430077CEEF2F4F91EDA9534BDB2D719DBD6BEE8EF519434390AA42D033D14F87602E42E6ED80BC3D6AC8DD94D21332E66789B811B42BBA3BD01796707650)
 
@@ -299,7 +299,7 @@ tags:
 月在当空，后面有很多月在当空，**清明之象**，代表说政治是清明的，你不明，本人不明哦，你自己错了。如果不是****，代表你是闲云野鹤，可以退隐山林，这个代表政治是清明的，错在你本身自己，你本身一定是骄，过于骄，一定要不骄，就会成事。
 所以一个乾为天卦卜出来，我们有爻课进展的时机，可以做什么事情，如果他的阶段刚好是相，比如说，做到部长了，相！到了院长是宰了嘛，如果这个时候来，你要他进德修业，你要继续努力哦，对你比较好。
 
-#### 2.坤为地 [䷁]
+### （三）坤为地 [䷁]
 
 这个卦，我们介绍易经，一定是天地定位，天的性，前一堂课就有解释。我们来看地的位置，坤为地，和乾为天，这两个，刚才忘了介绍，如果在阳宅学上来说，这边是东南西北，西北方是父，西南方是母，母居母位，为坤，为地卦。父居于父位，为乾为天。一个房子，不管门在哪里，我们先看布局，就房子的中心点来说，你的名字是妈妈，住在太太的位置，就是坤为地。你是爸爸，住爸爸的位置，叫做乾为天，如果太太住先生的位置，叫做地天泰，懂不懂我的意思，每讲一个卦，我就要讲阳宅上在哪个位置上。
 
@@ -336,6 +336,8 @@ tags:
 好，大家神回过来，如果有一个人找你问事情，你还没有卜卦，我现在是公司的董事长，那我是女孩子，我继承我父亲下来的，对不对，阴柔居阳位，里面很多的高级主管，都是在公司呆了很久，很多年，这个时候，如果你一亢，龙战于野，会冲突很大，因为你的女的，女孩子柔居阳位，这个时候呢，你要越穿的朴素，让手下穿得越好，坐在这边，中规中矩的听，听完以后，说哎你的意见很好，这样子，我回去研究一下，你的意见也很好，我也回去研究一下，如果你会看相，看他是真正的贤臣，采纳他的意见去做，对哪些人有怀疑也好好考虑一下，回去问问你的父亲问问你的家人，易经上说问有贤能之人，然后再做定夺。然后随时要保持这种戒心，千万不能亢，一亢进入第六爻，其血玄黄，这个人一定不但背叛你，还打击你，还乱搞，结果一定是这样.
 
 所以，即使我们不用卜卦，她进来，我们就知道她在哪个阶段，那如果同一个公司，来找你的是她的经理，刚好在第三爻的位置上，对不对，你要含章之美。经理来说，倪先生，请问你，我现在是经理，我上面还有副总，副总上面还有执行副总，上面还有总经理，现在董事长换人了，换来一个女的，我怎么办？ok，先生，您现在在这里，含章之美，你现在开始，不要去争功，就闷闷头去做事情，好好地去工作，公司有没有换老板，有没有加薪水，不要管，你就努力去做，很快就可以跳到第四爻这里。会不会以此类推，所以来的人，来的时机，不一定是同一个阶段，所以我们要看他在哪个阶段，给他一个最好的建议，了解我的意思把,就是坤为地的柔性。
+
+#### 2.读图
 
 ![坤为地](https://preview.cloud.189.cn/image/imageAction?param=97A64E047190D974353B5422E1814C6B457BC957841C628D0B884941849164A2135C2542916EEE336F48401C4A0ECC7F1D97A7A8AE40C6AEEFB86767D1D5FB556D12E0019B02174FA03D1DBF24149443E7253CDD898C04A460E32D9C88D4F644079A072AD52B999A1324C17C2A98EFEF)
 
