--- a/UPLD/倪海厦_天纪005_紫微星在子宫.md
+++ b/UPLD/倪海厦_天纪005_紫微星在子宫.md
@@ -253,7 +253,7 @@ tags:
 
 ### （一）水雷屯[䷂]
 
-#### 1.卦象
+#### 1.天机道
 
 ##### a.屯象
 
@@ -279,7 +279,7 @@ tags:
 
 我们老祖宗看到物之刚开始的时候，对外不明，所以呢，易经里爻辞写了，利建侯，诸位以后看到这个利建侯，就知道屯之时呢，要去广结善缘，广招辅弼，广结贤能的人，找资助，找辅弼的人才。这个是先不要动，待时而动。
 
-#### 2.爻辞
+#### 2.人间道
 
 ##### a.初爻
 
@@ -341,7 +341,7 @@ tags:
 
 所以上六，这个爻，一定要有阳刚来住，用贤乃解，贤要用阳刚之人。这个阳刚之人，包括你在法律上，是阳刚的，或者是领导力很强的一个人，这个阳刚之人是一个形容词啊，不是一个名词啊，代表一个个体。一个政体。你不要找黑道来解决啊。这个阳刚代表政体。法院是正体，警察局是正体。那君王没办法，他求外援，对不对，找美国帮忙啊,就是这样子。所以说，如果到了屯的极限，你不知道怎么为，就很危险，你赶快要外求，就不会有事。
 
-#### 3.图解
+#### 3.读图
 
 诸位看这个卦上的图解。
 
@@ -405,7 +405,7 @@ tags:
 
 从屯，水雷屯，物之始，古代圣人授之以屯的时候，屯之后呢，开始有智慧，智慧开始了，就是蒙。山水蒙完全谈如何启蒙。你是笨蛋，没有关系，启蒙的方法对就好，所以启蒙的技巧很重要，所以各位能够把山水蒙的卦意了解，你如果了解的话，你就是大智大慧的人，启蒙呢，为什么说蒙，是山下有水，这是水雷屯的续卦，一步步进来，小孩子先生出来，在妈妈肚子里的叫做屯，一生下来呱呱落地，就是蒙了，为什么叫做蒙，从卦体来说，上面是山，下面是水，**山下有水，遇险而止**。这个水是不是险，一个人，遇险而止，莫知所之，蒙象也。蒙的象。
 
-#### 1.卦象
+#### 1.天机道
 
 这是什么意思，我们一个人，出行，遇到险，一看到不对，停下来了，你在犹豫，就是蒙，懂不懂，所以世界上不是说任何什么事情都是很清楚，这个时候，如果能够拨蒙，那瞬间就能看的很清楚。有的宗教家天天念经十年，也不一定有这种蒙的智慧，宗教家常用一些咒语和经书来让你发蒙，诸位如果能够了解易经，不需要这些外在的东西。
 你只要看到一个人，遇险而止，不晓得往哪边走，这就是蒙的象。看到前面，你不知所措，你自然会停下来，因为你没办法做决策的时候，自然而然会先停下来，这是人的本性，这就是蒙。蒙的象。
