--- a/UPLD/倪海厦_天纪006_紫微星在丑宫、寅宫、山水蒙、水天需、天水讼、地水师.md
+++ b/UPLD/倪海厦_天纪006_紫微星在丑宫、寅宫、山水蒙、水天需、天水讼、地水师.md
@@ -255,7 +255,7 @@ tags:
 
 ### （一）山水蒙[䷃]
 
-#### 1.卦象
+#### 1.天机道
 
 蒙的象哦，山下有水，那山是外卦，水是内卦，水呢是险，内险，外是止的象，外止内险。
 
@@ -263,7 +263,7 @@ tags:
 
 所以蒙没有关系，要有童蒙，你在蒙没有关系，你要问嘛，敢问嘛，请教，不问我怎么知道呢，你要请教人家，人家一定会告诉你。可是有的人会渎蒙，就是他已经成为蒙了，成了笨蛋了，我是博士，我怎么可能会错，我是天下有名的人，我什么都知道，我走马路，我还要问人家啊，结果找不到，迷路的，就是他了。懂不懂，其实这个问题，哲学才叫着博士，其他都叫做专士，你叫他博士就完蛋了，我不懂，遇到十字路口，不知道怎么走，我可以问啊，像小孩子一样跑过去，哎请教一下怎么怎么样，他一定会回答你的嘛，好了，你自己去猜测，自己去以为，结果猜测以为出来的都不是事实。
 
-##### a.去蒙之道
+#### 2.人间道
 
 这是蒙，那么易经会告诉我们为什么立这个蒙，人会经过这个阶段，他就讲了人间道，他说，去蒙之道，诸位呢，要帮小孩子启蒙，也要注意，
 
@@ -271,7 +271,7 @@ tags:
 
 去蒙之道，要有时机，所以易经呢，告诉我们时机如何掌握，有一个人，他是你先生，结果你从我们这个班上毕业学完了，他没有听过我的理论，我的理论到你身上，你告诉他，他就蒙掉了，你有没有发现现在很多人，你怎么讲他都不听，今天你明白了这个方法，你想要主动告诉他，没有用的，今天以后不要讲了，要等他诚心一致来求你，诸葛亮当年隐居在隆中，他就是看刘备来，刘备了不理他，他不是摆架子，看看你会不会听我的，你要来问我就是要听我的嘛，要不然你来问我干吗，现在很多人，去问了人家，然后回来还是自己的意见，那你何必当初去问你，你问了半天，浪费人家口舌，然后你自己又没有收到。一定要诚心一致，小孩子来问你的时候，他不懂啊，他诚心诚意，他是童蒙，诸位要保持这个童蒙，要保持赤子之心，诸位想想连尧舜都不耻下问，对不对，气量大一点嘛，现在很多才智之人，外面很多博士，肚子能容万卷书，一句话都容不下，你知道不知道？这叫做气量大吗，为什么容不下呢，他平常心来问你的时候，代表他想要，这个时机你告诉他，才能去蒙，否则他不想听，你后面跟着他，哦，你一定要听我的，很多妈妈现在都是照样，你不要理他，要待时机，待他诚心一致来求己，再告之，方能去蒙，必以贞正。必以贞正这句话很重要。
 
-##### b.阳宅
+#### 3.阳宅
 
 我们的阳宅学，易经的阳宅呢，东南西北，这个九宫八卦立位的时候，夫妻，子女，一千年也不会改变。
 
@@ -279,8 +279,6 @@ tags:
 外面的这些阳宅学，为什么会这样，因为他没有法则，他都是在形上做文章，所以每年都不一样，你看法国巴黎设计师，每年都要设计过衣服，我们这个阳宅一千两千三千年，都是这样子，64卦，是他的神！所以外面的阳宅学是狗屁啊。
 
 你根据什么，根据他自己说的，懂不懂，他今天说的，跟明天说的，不一样，等他真正死的那天也搞不清楚阳宅学真正好在哪里。太差了。那你放心，我们这里讲的是真正的方法，十年后，该是天地否还是天地否，大概讲天地fou，但是是一样的意思啊。这就不重要了，这是形嘛。这是去蒙之道。
-
-##### c.国家立法之道
 
 所以过去我们古人，在民智未开，百姓还是蒙的时候呢，君王呢，
 
@@ -297,7 +295,7 @@ tags:
 
 即使我们不懂这个，我跟你打官司，告你，然后告我了，我赢了，你千万不要说，我赢了，我好开心，表现给你看看，我告诉你，你会增加仇恨，赢了我也不要去太乐。要指出是他错了，很谦和地对待人家，这样才不会有后遗症。这样就上下顺。所以个人认为当年tanm事件dxp他们这样做的，是对的，没有办法。你随便找个那边的人，不管是谁，处在这个位置，你看他怎么做。你要反面想啊，对不对。这都不对的。你在逼得没办法，这样子。诸位来看占卜。
 
-#### 2.读图
+#### 4.读图
 
 有一只鹿站在地上，那你说老师我知道鹿者禄也。那你知道我为什么教你们读图啊。诸位是否知道以前有本《无字天书》，就是没有字，只有图啊，你当他白纸一张啊，好好笑！我们在读图啊。
 
@@ -312,19 +310,16 @@ tags:
 
 整个卦，蒙啊，整个蒙卦，整个读起来，就是李姓的人，儿子夭折，如果出现蒙蔽的手段，为的是财禄，钱是在那边，但是真正的珠宝，还是在船上面，大家忧心忡忡，但是整个一句话，对不对，先成后破。
 
-##### a. 为官之道
-
 所以为官之道，一定要有清廉，为政者，不可以有任何的贪念，大家都说要做大官，做大事，话谁都会说。但是要知行合一啊，千万不能说，你们做大事好了，大官我来当就好了，不可以哦，要知行合一，这是山水蒙。
 
 所以，除了蒙蔽，我们如何启蒙，反过来看，如果我用蒙蔽的手段对付你，你发现我在蒙蔽你的时候，这就代表说我有所企图，懂我的意思把。没有什么企图，有什么好蒙蔽的。蒙蔽了以后，启蒙，蒙之极，蒙就开了，对不对。
 
 ### （二）水天需[䷄]
 
-#### 1.卦象
+#### 1.天机道
 
 蒙开了，进入下一个卦，水天虚。为什么要水天需，水呢，外险，天呢，内健，天是刚健，如果一个人，内健，每天在家里充实自己，外险，外面很破烂，**需，需有等待的意思**，等待时机的意思。
 
-#### 2.原因
 
 那为什么蒙卦之后是水天需，这就好比一溜一溜的顺序，好像小孩子的成长，爸爸妈妈结婚的时候，叫做乾为天，坤为地，然后妈妈有一天怀孕了，胎儿在妈妈肚子里，叫做水雷屯，小孩子一生出来，山水蒙，那小孩子要成长，就是水天需，所以
 > 物之始生，必待养成.
@@ -336,13 +331,13 @@ tags:
 
 所以易经上，光看这个卦，诸位就知道了，有一个刚健的人，天是天下最刚健的人，结果他知道外险，越是刚健的人，他不会因为刚而急躁，求功心切，往前冲，他都知道要等待，这个就是很厉害了，懂不懂，水天需的卦就在这里。外面的人个性急躁，求功心切的人很多，但是他知道，越是照样，他越要等待时间，那就可怕了。那外面很多的庸才，一年十二个月，换了十三份工作，这种人就是庸才废物啊。他每天都在那里说时不与我你看我多有能力啊，可是老是找不到适合我的工作，世界上哪有那么适合你的工作，你又不是天子皇帝，我巴结你干嘛，对不对，应该要想办法让自己去适应环境才对，所以现在民心不古，就是这样子。
 
-#### 3.人间道
+#### 2.人间道
 
 人间道来说的话，刚健，刚是有自己的原则，健是非常有知识有学问的人，刚健之人，知险，知道外面是险的，待而再进，等待时机而进，这是至善之道。这是最好的做法。
 
 那至于六爻的爻变，诸位自己去看书，或者是看人间道，我会写在里面。如果以占卜来读这个图
 
-#### 4.读图
+#### 3.读图
 
 ![水天需](https://preview.cloud.189.cn/image/imageAction?param=6343CB6395A008CDC3F888AC68AA2B7A6F332931A8661410EEC0B21E21E9AD807C71FE3585C591F30F09D81A7ECD00D661DA51A8BD1D8B78B4E3A8E7268C7AE33D6B879040BF65A17F4147338D2DB9AF23F571ABA4283C02E5BE97BD18DA8CCAA54892A2AD593B4A671E589C20F6EC00)
 
@@ -362,7 +357,7 @@ tags:
 
 置之死地而后生，遇到这个事情，就是照样解。
 
-#### 5.阳宅
+#### 4.阳宅
 
 那山水蒙，跟水天需，如果在阳宅上来看呢。
 
@@ -394,7 +389,7 @@ tags:
 
 ### （三）天水讼[䷅]
 
-#### 1.卦象
+#### 1.天机道
 
 再来是天水讼：为什么是天水讼，水天需是饮食之道，因为有饮食，大家就会去争，有了争以后，大家就有了讼，所以讼之初，一定是有争，有争夺。各位看，讼是官司诉讼纠纷的，外面是健，内卦是险，是不是变成外健内险，有一个人，外表装饰的很好，里面是空的，这是讼，诉讼的源头。
 
@@ -455,7 +450,7 @@ tags:
 
 ### （四）地水师[䷆]
 
-#### 1.卦象
+#### 1.天机道
 
 地水师，很好玩，爸爸住过来是天水讼，妈妈住过来是地水师。讼卦完了，就是地水师。诉讼打完了，一定会结仇，所以我刚才讲过，就算你打赢了，你不要沾沾自喜，到全世界去宣扬你打赢了，然后那个输了的他会恨你哦。打赢了也跟他说，很抱歉，我不是想跟你打官司，我只是想告诉你你的动作是错的。你要反过来想，你要认错，将来你服刑什么什么的，一样会很好的，你给人这样做，这样态度就没有了。如果你到处宣扬，你看我打赢了。所以讼之后，有师之道。所以两个国家开始吵，吵不完了，**武力解决**，就是师。
 
@@ -463,7 +458,7 @@ tags:
 
 水到地上来了，就是水地比嘛。水还是在下，叫做地水师。师有军队、出师、兵道，光是一个地水师，我们孙子就写了一个兵法，兵书，你看易经六个爻，从此你就是很好的名将，晓得如何出师，如何打仗。
 
-#### 2.内外卦
+#### 2.人间道
 
 我们如果以外卦内卦来看的话，变成地是顺，水是险，为外顺内险之道。
 比如说，我是受命出兵的将，部队都出去的时候，大家都集结，听命于我，其实我最紧张，打败了我怎么办，心里很紧张，兵是行险之道。意思就是提醒，不得宜势必要出师的时候，要战战兢兢，随时抱着打仗打败的打算，心态要这样子。
@@ -472,7 +467,6 @@ tags:
 
 记得唐太宗问李靖的时候，古今胜败，一误而已，所以出兵打仗，不能有一点失误，因为你没有从头来的机会，绝对不容许自己第二次犯错的机会，如果你抱着前锋打败了没有关系，不能这样想，一点一滴一兵一卒统统要用到。要顾虑到这种状况。
 
-#### 3.人间道
 
 > 师，以正为本,名正，以毒天下，民弗怨也。贞正吉。
 
