--- a/UPLD/倪海厦_天纪007_紫微星在卯、辰、巳、午、未宫、地水师、水地比、风天小畜.md
+++ b/UPLD/倪海厦_天纪007_紫微星在卯、辰、巳、午、未宫、地水师、水地比、风天小畜.md
@@ -250,13 +250,15 @@ tags:
 
 ### （二）水地比 [䷇]
 
-#### 1.人间道
+#### 1.天机道
 
 所以易经上面讲比卦的时候，特别提到。
 
 > 两志相求，为比，两志相违，为睽。
 
 志气相同的人会在一起，志气不同的人，两个人不会互相往来，互相仇恨。
+
+#### 2.人间道
 
 进入人间道以后，我们历史上很有名的，他说：同欲相憎，同忧相亲。这是一个不变的规律。欲望相同的人，小姐，你我两人都是副总，一起想升总经理哦，这是同欲，一定两个人在敌视，我们两个人一起跑路，在海边碰到了，同忧，相亲。这是不变的，这是人间道，这是至理，你不需要去confer，有没有道理啊，这就是进入人间道.
 
@@ -265,8 +267,6 @@ tags:
 那田婴旁边也有一个姓张的人，叫张田，他说报告国王，这个张登是有名的怀丕子，你被他骗了，历史上不变的教训，同欲相憎，同忧相亲，所有的四个王，就担心你齐王最大，你如果一立中山王，其他的王都会怕你，当初你要打他，现在你立他为王，你立一个王，亲近一个小国，结果和其他国家作对，得不偿失。每一个国家都担忧你不让他称王。怕你并吞天下。每一个人都同忧。张田就说张登的话不能听。田婴说不听你，招中山君来称王。这个张登多坏啊，马上跑到魏国赵国燕国去，我告诉你们，齐王要来打你们了，为什么，他以前联系你们干中山君，现在他招他称王，要用他的部队，你们要小心，他们这几个国家一听，马上就联合起来，要对付齐国啊，赶快也立中山君为王，你看。厉害不厉害，所以自古不变的道理，要抓住这八个字的精髓，这是最好的外交官，也是最好的谈判。看人性看的最清楚，所以说，当你遇到这种情形的时候，你有这种认识。
 
 同样的，当你是老板，两个人之间你要升一个人的时候，同样有这种情况，了解我的意思。那如果你要大家同舟共济，很简单，让大家同忧嘛。大家就相亲，这是千古之道，人间道。
-
-#### 2.卦象
 
 这个卦象，外面是水，是险，里面是地，内顺，所以比卦，相亲，亲和为比，所以呢，比之道。互相亲和就是外险内顺。你要跟一个人变成好朋友，要外险内顺，亲和嘛，外面要战战兢兢地，对他很尊重，里面要诚心诚意，要内顺，有的人是外表很顺，心里想着骂你呢，那你说如何看出来骂，我们就看的出来啊。
 
@@ -307,13 +307,13 @@ tags:
 
 易经是一个一个卦接连，顺序地发动，比的序卦呢，叫小畜卦，风天小畜。为什么比之后为小畜，比是亲比，大家亲和在一起，亲和在一起就会结社，结合成一个社会，大家比较亲和，我们组成一个社团，易经学会，**小畜卦呢，就是积的象，聚的象**，小畜卦就告诉我们相聚之道。
 
-#### 1.卦象
+#### 1.天机道
 
 那聚的好处有哪些，自然的象，外面呢，外卦上卦是风，风为顺，内卦是乾，健，对不对，刚健的健，内部有一定的原则，外面是柔顺的，这个象出现的时候，就是小畜卦，那小畜之道也在这个里面。要大家聚成一个团体，第一个，内健，本身有一定的实力，有一定的看法，所以志同道合的人一定会同聚在一起，就好像蛇鼠一窝一样，所以你抓小偷，不是一个，而是一票。同志之人必同聚。这就是聚的相。
 
 所以聚在一起的时候，如果外顺，大家都很和睦，内健，各人有各人的事情，处在一起非常的愉快，这是小畜卦。卦象哦，小畜卦出现，本身卦象上，**以小畜大**。这里有个爻格，比较特殊一点，风天小畜卦：
 
-#### 2.物象
+#### 2.人间道
 
 你看他的爻，就是物象，这第四爻的位置是阴位，是近君的人，六四没错，这个位置是最近君主之位，这是相啊，将啊，下位。所有的都是众阳，一个阴在那里，上面的皇帝君王总统，跟下面的将相都是阳刚，起冲突，你一个人夹在中间，懂不懂我的意思，就是小畜，所以小畜之道，能够以小畜大，为什么，小畜是阴柔，柔，这个时候，你如果夹在中间，刚好你是他的秘书，办公室主任，你夹在中间，你要有小畜的道理哦，不可以落井下石哦。小畜嘛，对上是柔，对下也是柔，懂不懂我的意思，变成第四爻就变成了上跟下沟通的媒介。所以他以小畜大，懂不懂，畜的道就在此。
 
