--- a/UPLD/倪海厦_天纪008_紫微星在酉、戌、亥宫、天泽履、地天泰.md
+++ b/UPLD/倪海厦_天纪008_紫微星在酉、戌、亥宫、天泽履、地天泰.md
@@ -230,7 +230,7 @@ tags:
 诸位看这个小畜卦的序卦，我们叫天泽履。
 小畜卦的序卦，为什么是履，小畜卦是聚的象，那人聚在一起以后，大家在一起，就礼尚往来了，所以**履，礼也。**而制履之道也就是履，化解履的状况，也就是礼。
 
-#### 1.卦象
+#### 1.天机道
 
 那为什么叫做天泽履，天在上面，泽在下，天本来就是在上面，沼泽本来就是在下面嘛，这叫做尊卑、上下，长幼有序，**长幼有序就是礼的源头**。礼的本。但是现在外面的老师，所有的宗教家，不管你信什么宗教，都是嘴巴上会讲道理，道理人人会说啊，说我们长幼有序很好，结果回到家里，儿子打爸爸，妹妹结婚姐姐还没有结婚，夫妻要闹离婚，对不对，还有那同性恋，那现在很可怕，我给那些宗教家信仰宗教的人一个建议，非常多的人，信了宗教以后，拿了宗教，是一个形，懂不懂我的意思，然后他每个礼拜乖乖地去听道理，他认为听完道理就是圣人，我就不会错了，这种人很多哦，礼拜六才讲完说上帝说不要任意批评别人，有一天上帝会批评你，礼拜天早上，人家送礼到家里来，你就说这种礼怎么可以送家里来，这不是丢脸吗，懂不懂我的意思，背后批评人家，这种人相当多，这个表里要合一的，这是礼的源头。因为我们的祖宗看到天在上，泽在下，天地的顺序，就是礼的本。
 
@@ -242,11 +242,7 @@ tags:
 
 我们一看，小姐你是公务员的命，你这辈子看公务员领退休金，你一辈子很快乐，你说倪先生，我想做生意当老板，对不对，谁都想当老板，你不行，你去做一定必败，必败哦，你不要说，小姐你大概可能也许会败，她就去做了，你一定要用果来决其行，让她安于其位，她适合扮演角色就安于哪个角色，然后安于她的角色，她的外相，就是外健，每天正正堂堂地面对人家，不会闪闪躲躲，闪闪躲躲的就代表你股票市场输钱，你贪嘛，内悦，里面很高兴，我在这个位置我很愉快，我好爽，对不对，即使是柜台工，有些柜台工也很愉快，每天很愉快的面对大家，外健内悦，就是礼之道，就是内心要有定志，你要知道你扮演什么角色，安于其位。
 
-现在我们社会上，士人，从下到公务员，上到部长院长总统，都一样，士人日夜所念的就是如何我更尊荣，现在百姓看你坐汽车出来没什么稀奇，部长院长都坐汽车，不行，我要坐飞机出来给你看，太过。所有的都想日夜尊荣，然后农工商的人呢，每天在那里想，我要赚亿万的钱财，已经没有限制了，这个时候，亿万的人口都在互相交利，那你想想看，大家的心怎么会连在一起，你要让天下不要乱，都很难啊，一定会大乱的，所以我们君子，处履的时候，一定要有礼，利就要有限制，就好像我们自由也有一定的限制，没有限制我开车开到总统面前停下来，我高兴啊，自由，这不是胡说八道。一定要有限制，有了限制，最重要的，就是每个人都会安于他的位置，这个时候人心就统统在一起，当你安于你的位置的时候，你不会去羡慕别人嘛，你王永庆有100亿吃牛肉饭和我吃的牛肉饭是一样的，你每次吃牛肉饭放一块黄金啊，毒死了啊。一样的嘛，为什么有贪念呢？所以我们为什么要去算命，就是叫你各安其命，我们为什么要去改阳宅，也是叫你各安其命。
-
-#### 3.卦辞
-
-那各位看这个天泽履，爻卦上面看的时候，我们老祖宗画的这个样子，天在这里，泽在这里，是不是，爻卦：
+现在我们社会上，士人，从下到公务员，上到部长院长总统，都一样，士人日夜所念的就是如何我更尊荣，现在百姓看你坐汽车出来没什么稀奇，部长院长都坐汽车，不行，我要坐飞机出来给你看，太过。所有的都想日夜尊荣，然后农工商的人呢，每天在那里想，我要赚亿万的钱财，已经没有限制了，这个时候，亿万的人口都在互相交利，那你想想看，大家的心怎么会连在一起，你要让天下不要乱，都很难啊，一定会大乱的，所以我们君子，处履的时候，一定要有礼，利就要有限制，就好像我们自由也有一定的限制，没有限制我开车开到总统面前停下来，我高兴啊，自由，这不是胡说八道。一定要有限制，有了限制，最重要的，就是每个人都会安于他的位置，这个时候人心就统统在一起，当你安于你的位置的时候，你不会去羡慕别人嘛，你王永庆有100亿吃牛肉饭和我吃的牛肉饭是一样的，你每次吃牛肉饭放一块黄金啊，毒死了啊。一样的嘛，为什么有贪念呢？所以我们为什么要去算命，就是叫你各安其命，我们为什么要去改阳宅，也是叫你各安其命。那各位看这个天泽履，爻卦上面看的时候，我们老祖宗画的这个样子，天在这里，泽在这里，是不是，爻卦：
 
 到后面的时候，456爻全部是阳，上面一个卦，下面一个卦，对不对，456都是阳，就是礼之终，就是礼的终极，到了礼的顶的时候，诸位要记住一个原则，叫做**始终如一**。
 
@@ -284,7 +280,7 @@ tags:
 
 来，我们来看地天泰，履之后啊，履的序卦，是泰卦。为什么履之后是泰卦，我刚才讲了，履卦就是有礼嘛，履的终极是始终如一，如果全人类都是始终如一，天下治世就来临了，就进入泰了，所以易经很细，一步一步把你设定好，你在哪一个阶段，有一个卦来代表你，所以呢，履之后为泰卦，泰卦出现的时候：
 
-#### 1.卦象
+#### 1.天机道
 
 这是上，这是下，我们有天有地，天气一定是下降的，地气呢，一定是上升的，这是就所谓的阴阳交合，阳向下，阴向山，所以你看大自然，太阳照射的时候，地面上的水气蒸发到上面空中，看到没有，叫做天地在交合，阴阳在相交的状态，天地通畅，所以地在上，天在下，就是地天泰，这是天纪，自然界的现象，那如果有一天天在上面不下来，地在下面，就是什么，天地否，就是后面我们来介绍的。
 
@@ -307,7 +303,7 @@ tags:
 
 你就是地天泰。所以你要站在我的肩膀上往上走，我帮你在下面抬上去，所以你们看像不像一个空杯子，我要叫你们做一个空杯子。
 
-#### 2.卦辞
+#### 2.人间道
 
 可是现在全世界的老师都不是这样子，尤其台湾的，我是老师哦，至刚的，我是老师我怎么会错我从教育部师范大学毕业，我是至刚的，我就是对的，小朋友进来了，看到你，老师好，吓死了，初爻啊，阴柔啊，第二个不得了也吓一跳不敢随便进来讲话，讲话还得了，家长也不敢讲话，结果是否的，训练一票否的出来，现在的教育是否子再教育否子。
 
