--- a/UPLD/倪海厦_天纪009_案例民国44、42、47年、天地否、天火同人.md
+++ b/UPLD/倪海厦_天纪009_案例民国44、42、47年、天地否、天火同人.md
@@ -214,7 +214,7 @@ tags:
 
 算命测字卜卦，都是属于天；看阳宅地理位置还有人间道，所以人间道加上地理位置，就是三分之二，就会大于天这三分之一。这是最合逻辑最合科学的解释。那易经的原文呢，否之匪人。就是否的道，非人道。不是正道。所以，逢到否之道，不是符合我们易经的天纪，易经上就是非人道，叫做匪人。我们上节课讲到天地否和地天泰，他发展的是在一念之间，成否，还是成泰。这堂课跟诸位讲，处否之时，当你遇到否塞不通的时候，什么叫否塞不通呢？
 
-#### 3.爻辞
+#### 3.人间道
 
 比如说他的爻变是这样子：第一爻阴爻，最下位的人，敢怒不敢言，你是老百姓，第二爻你是将军，也是附和，不敢讲话，阴爻嘛，现在社会上很多这种人，该讲话不敢讲，到宰相的位置，还是阴爻，然后让上面是阳爻胡作非为，我非要干，非要干到底，然后上面当了天子还不够哦，还相当圣人，如果是信基督教的话，想当圣雄，异想天开，当上帝，所以就是否，那处否之时，否塞来的时候，否的时候，所有天下的君子都不居荣位，因为否之道的话，小人得道，君子道消，以退为进。所有的小人呢，在否象上面，讲的很清楚，注意看，外健内柔，里面呢，阴为小人，外面看是君子，外面穿的西装笔挺的，讲话讲的都是君子的话，一肚子里面坏水，言行不一致，表里不一致，就是小人，现在我们国家很多人，我做什么事情都是为了大家，讲了半天，如果你真是为大家，你就不要讲为大家，你就去做好了，如果是君子不开口，直接去做，含章之美，你在那个位置，你本来就该做的，你为什么去讲，为什么取歌功颂德呢，自己还成立一个日报来歌功颂德，这不对嘛，找一个不对的人去当一个电视台董事长，就是想去替自己歌功颂德。这是不对的，我们要盖棺论定，不是你在那边歌功颂德就可以了。
 
@@ -278,7 +278,7 @@ tags:
 
 诸位看这个天火同人，这个否卦，否之终则倾。否塞不通，小人当道，到了终极的时候，一定会倾覆。为什么，因为你看这个否，到了第六爻的时候，到了九六爻，上九的时候，他还是以阳刚，这种阳刚一出现，代表小人遇到阳刚的人，否要解散的时候，遇到阳刚，那诸位，上位这个人，这个是君位，那比君位还要大的人，和下位其实是同样类型，就是我们的民心，民心不容的时候，诸位，如果台湾两千万的人口，每个人的个性像我这样子，早就game over了。如果我们出去，有的人呢，躲在后面，在阴柔，看好戏，可是要需要每一份力量，那否到终的时候，遇到刚，为什么，因为太过分了，已经做得太明显了，连百姓笨蛋都看懂了，这个时候，变成了倾覆，否倾覆之后，否之后呢，是同人，因为阳刚的人来治否，治小人，物必所归，所有的人心都归心于阳刚的人，这个时候呢，受之以同人。同人呢，就是易经讲的大同之道。礼记里面讲的大同之道，不如易经里面的大同之道那么好，当然他也看到了，不然他怎么会有这个名词。
 
-#### 2.天机道
+#### 2.人间道
 
 礼记的大同篇呢，就是易经的同人卦来的。否之后，会有天火同人。天机上面来看，天性本上，上卦，火呢，火为炎上，火没有往下烧的，烟火往上走，火的性与天同，所以受之以同人。天地之间的道理，因为他两个之间属性相同。
 
