--- a/UPLD/倪海厦_天纪010_案例民国46、51、50年、火天大有、地山谦、雷地豫.md
+++ b/UPLD/倪海厦_天纪010_案例民国46、51、50年、火天大有、地山谦、雷地豫.md
@@ -176,11 +176,11 @@ tags:
 
 ## 五、六十四卦
 
-### （一）火天大有 []
+### （一）火天大有 [䷍]
 
 同人卦完了以后，叫火天大有。
 
-#### 1.卦象
+#### 1.天机道
 
 离为火，离中虚，天，易经从第一个爻到第六个爻，这三个，这三个，各一组。这是外卦，这是内卦。大有卦呢，是同人之序。为什么是同人之序呢。前面介绍天火同人的时候，人心能同，人如果能够同心，千万亿万人一条心的时候，易经在人间道，物必所归，如果一个为政的君王，他的心能够跟百姓的心是一样的，他了解百姓的疾苦，他做出来的事情，都是因为百姓的需要而去做的，这个时候，人统统为所归。统统归来以后，成为大有。所以火天大有卦专门讲君王之道。就是当一个总统要怎么做，什么叫做最好的君王，什么叫做小人的君王，什么叫做君子的君王，大有卦，就是完全讨论天子之道。
 
@@ -191,7 +191,7 @@ tags:
 
 这个大有在物象上面，跑到人间来的时候，第一个，富有人。有个很有钱，他大大的一笔财富在身边，富有本无罪，但是你有富有而骄侈之心显露于外，一定有祸。所以这个富有如果处理不好，反而招来祸害。这是富有的人。
 
-#### 2.爻辞
+#### 2.人间道
 
 那天子在第五爻，是君王的位，下面五个阳统统来朝他，君王的位，135本来就是阳位，对不对，五阳位为君位，今阴柔从之。易经告诉我们了，天子之道，要居尊执柔，这是天子的德性。
 
@@ -203,9 +203,9 @@ tags:
 
 #### 3.读图
 
-![]()
+![火天大有](https://preview.cloud.189.cn/image/imageAction?param=BA7B0492F8D638E5D7DEB33E97549B9C4AA8AA060383AE0A0D5090BD8E3882D1DDD13963B9D3A23395EF56FEFFD3C036EF277AEEA01671F100B0E4EBB4B3E825E30A898E6CF7F0E34488DA4F9B1ED920FE58617850A1A8B23C1ED8AE76E94558746B8D7EF83390EBC1B45804F731B565)
 
-![]()
+![火天大有](https://preview.cloud.189.cn/image/imageAction?param=7C82F08584DB3BD68B23670C0BC814E38B1B800F29EA823B5622477B17D19CA221D9A8B1ED96B25D81E10AF0F1823FC8A90734FAB86EAC941E780DE93583AA9F1F8038B718A4591431B77D1123FC7FEF613EBEC1C2F0C5879F1F30C511E9A1F7242845BF799CCE8742A24E341F552587)
 
 妇人福中一道气，气中二小儿，一个药旺，药有光，女人受药，一犬。你看这个图什么意思。
 
@@ -233,9 +233,9 @@ tags:
 
 举例哦，一般来说，住在火天大有的女孩子，很特殊，比如说她的命，是36岁结婚，她住在大有卦，她会变成怎么样，33岁结婚，所以她住西北角，还是是会结婚，但是她结婚之前呢，先有子，后婚，后婚的夫呢，是已婚夫。过去我的临床是这样子，她去做秘书，认识她老板，她老板已婚，跟老婆处的不好，那他秘书原来是夹缝中间生存的，有什么事情老板娘都找她，首先是帮老板娘，结果回头一看，发现老板娘很小人，到处造谣生事，我们老板不是这样子的人，然后就同情老板了，就帮助老板了，可能先生了个孩子，那老板还没离婚，不行啊，后来老板离婚，就跟她结婚了。 这是后天大有卦。
 
-### （二）地山谦 []
+### （二）地山谦 [䷎]
 
-#### 1.卦象
+#### 1.天机道
 
 这个谦卦，本身是大有的序卦，我们在大有之后，拥有了我们想要的东西后，我们古代的圣人啊，戒盈！盛。孔子害死人，他说我们要戒慎恐惧，我们做什么事情都要小心啊，谨慎啊，这是废话，害死人，孔子有些很好，有些错了啊，你不要读书读到被书绑到。
 
@@ -257,9 +257,9 @@ tags:
 
 #### 3.读图
 
-![]()
+![地山谦](https://preview.cloud.189.cn/image/imageAction?param=F4C768723C10DBD5EA867AF7B2767BD09F0B157C6210FFECF717D473A9C740E4A5F1B43F803D22E15EBDAED055822F8D6D07BDDC97A535E63160D634F5E1B38D8F4E37992C6D652517FAF871795830EF61D3078F35C6B8E0EB57E9DF9FDA42C7773C4167A41A2BBF145CA2D3C4EABD13)
 
-![]()
+![地山谦](https://preview.cloud.189.cn/image/imageAction?param=AF93080D0DEA6D52BBC59DC1769C53C51BB2159F294CB0AFB8401740B8A01E72D7536B0CC52EF4FEE5970D6998F8A4E968FF7E0C1AF5870E228E53F933A15766B9A6A55242CB11DB882CE2AC40FB4C63BA673A357202B265956D915349CBC67A44C6308DCF8336F3536AF9302A335448)
 
 占卜：诸位看地山谦。
 
@@ -284,11 +284,11 @@ tags:
 爸爸住东北很好，跟妈妈不一样，所以65岁以上的退休夫妻要分房睡，不要睡到一起，那你说开玩笑夫妻一辈子睡在一起哪有说分房睡的，可是易经说的嘛，我怎么办呢。
 那分房的原因，有原因的，我们壮年的时候，阳盛阴盛的时候，住西北角，阴阳调和，年老力衰以后，要分开来，要养精蓄锐，才会长命百岁，过去是这样子讲的，那你说我不想长命百岁，那你就随便住把。这个看个人嘛。
 
-### （三）雷地豫 []
+### （三）雷地豫 [䷐]
 
 再来，谦卦之后呢，雷地豫。
 
-#### 1.卦象
+#### 1.天机道
 
 这个豫是悦也，顺也，雷地豫，这个豫卦，本身这一卦，承继大有卦还有谦卦这两个只之序。当一个人什么都大有了，什么都有了，你是天子嘛，像王永庆也是一个天子，事业已经到了一个阶段，之后序卦是谦，谦之后，马上进入雷地豫，进入喜悦之道。为什么易经特别要这样，你看易经从乾为天开始，然后一步步慢慢演进，一个人的兴衰，统统有这个规律，像雷地豫就是喜悦之道。
 
@@ -310,9 +310,9 @@ tags:
 
 #### 2.读图
 
-![]()
+![雷地豫](https://preview.cloud.189.cn/image/imageAction?param=066BD8B584BFA5A7FE46A76FA41832AFEC681E90E841839B9406351CF3E148C1E9029EFA3894760D6535B4B5BEEC0CFC316F7A02196BCAD3A513F9927B459FA4A0E55DE163709E23872BAC53442182216FF9D85CDA127A0A6DC54AD8CB2A2D58765241CCAD66303D7C880720E365F6AB)
 
-![]()
+![雷地豫](https://preview.cloud.189.cn/image/imageAction?param=D941D2FF90EDA4B64F429CA7198E2BC54F6443C239A840FF0AB1A2619811546B83CB442115E191090E6AE73A7628B3585A9AEB7BB525DDB14A4EFF78BDD44DC80F6A95DAE3705C71A998A3D268C19E5BCFD46F7D8B3E7C4361DF1E3D8ECB42EEB94E1CB2E6950284E497C15EFF46D88F)
 
 诸位看呢，这个雷地豫哦。在象上面来说，占卜的时候，诸位看：
 
