--- a/UPLD/倪海厦_天纪011_案例民国50年、54年、83年、雷泽随、山风蛊、地泽临、风地观.md
+++ b/UPLD/倪海厦_天纪011_案例民国50年、54年、83年、雷泽随、山风蛊、地泽临、风地观.md
@@ -194,7 +194,7 @@ tags:
 
 ### （一）泽雷随 [䷐]
 
-#### 1.人间道
+#### 1.天机道
 
 泽雷随：随的来源呢，人的性，每个人，皆因喜悦而随。所以雷地豫讲的就是喜悦的道。那因为有喜悦，那人就会跟随而来，所以遂卦是豫卦的序卦，延续下来，这个卦专门论随之道，所以周易的每一个卦，就是专门论一件事情，这个随，你要追随，比如说人间道，古人圣贤为什么领悟到随之道，因为，泽在雷上，雷打在泽的下面，也就是这个雷一打打到泽上面，泽随之而动，这是一个随的象，自然界的象，那圣人体会到随的重要啊，有几种状况。人间道就出来了：
 
@@ -205,6 +205,7 @@ tags:
 
 这个长不单单是从长辈，而是从专长，你遇到事情要术业有专攻，要请人。也叫做长，你不要老是长辈长辈，就完了。你读易经就成了难经了，越读越难了。
 
+#### 2.人间道
 那我们人呢，一般的人，这个常人，随的时候，常人所随由己心。这是一般人是这样，你看到你心里所爱的，你看到他做的都是对的，你心里所讨厌的人，你看到他都是错的。这是常人之随。你不能说你喜欢的，都是对的哦。你喜欢那是你的事啊，怎么都是对的，这是乱随。
 
 君子之随，什么叫做君子的随，**交往不以私。** 就是不受到私情的影响，守正道的人，专一,这是最好的随道,戒之在兼。 很多人呢，交朋友的时候，这个随啊，他也交正人君子，刚正的人，他也交，小人他也交，这就失掉了君子的义。因为真正的君子和你交往，发现你和这个小人也交往，他就根本不要你这个朋友。结果你失掉君子，是因为你自己没有去戒，兼交，你以为兼可以，其实不行，小人会利用你的好，他跟我是好朋友啊，来提升他自己的地位。
@@ -215,7 +216,7 @@ tags:
 
 我们圣人呢，最后把随卦，归纳成一句话，**得民者昌，失民者亡。** 这是我们古代圣哲告诉我们的，其实就是从随卦来的，他说，即令失位之人，你完全离开权位，这是随之极，到了第六爻的时候，随卦进入第六爻，是阴爻嘛，完全不在君位了，离开了，但是民心还是维护你的时候，你还是可以照样恢复你的基业哦，民心的重要就在这里。
 
-#### 2.读图
+#### 3.读图
 
 ![泽雷随](https://preview.cloud.189.cn/image/imageAction?param=DDAD32C1604A559A0C0F20439BCAD43DBA89852E28F8E10F8F9B7DB7DF00A321D9CFE56B0A41E45669C6240C0A0D178B4844C02D3C01CB1EC332A780C085068D3A0DABF10790818455F3B6D3D344425CA3641548CFBD68894EE5293662FFA5090E39B29BD9C65D820AE1F9FCE4ECF26F)
 
@@ -231,13 +232,13 @@ tags:
 
 坐下家黑点，叫做乱珠聚，先聚后散，为什么，你家里有小孩子，你把一个珠放哪里，不用一个上午，一个小时，不知道到哪里去了，这叫做先聚后散。 为什么讲先聚后散，任何的卦象就有果在里面，因果统统在里面。有人来卜卦，先生你看我跟人合伙做生意好不好，一卜，会赚钱，但是会因赚到钱以后，而拆伙了。了解我的意思把，那你说有解嘛，卦上有解，你要和你的股东谈义，谈利就不行，什么叫做义，要帮人家断后。
 
-#### 3.阳宅
+#### 4.阳宅
 
 少女居长男位，第一个，女生男态，女孩子跑出来穿裤子动作像男人，剪个短头发；第二，女同性恋的倾向；第三，一心于事业，未婚，居君侧；你看一些女孩子，很年轻二三十岁，她就做了大老板的秘书，能力很强啊，泽雷随，随卦；第四，婚姻有利能成，少女必嫁富夫。这种女孩子，一定有钱我就嫁，再矮再丑都没有关系。以财富来决定嫁先生。我们平常算命，不会这样讲啊，我教你们才这样讲，你不要跟她什么都讲出来；第五，婚早四年。比方说，看她的命盘，30岁红鸾星动，她26岁就结婚。加减就出来了。
 
 ### （二）山风蛊 [䷑]
 
-#### 1.卦象
+#### 1.天机道
 
 随之后呢，是山风蛊。蛊卦的意思，本身是有事，或者是坏乱为蛊。为什么在随卦之后。这个人之随啊，必有事，无事何喜何随？人的随，一定要有事情，才会跟随到你，没事跟他干嘛，所以蛊是随的序卦。那在自然界的象呢，山风蛊，风在山的下面，风走的时候，遇到山而停止，止路回头，所以风本来往前吹，遇到山之后往回吹，造成物乱，就是蛊。
 
@@ -258,7 +259,7 @@ tags:
 还有呢，有个最重要的，这个反过来，到了君王的位置，五爻是君王，以柔顺之才，任阳刚之才，你本身君王是柔弱的，任用阳刚之才，这个只能让你守旧业。所以如果你去接掌祖上的事业，如果你知道你是柔的，你用阳刚的，这样你可以守到你的基业。从古到今，凡是能开创事业，开国的人，都是阳刚的人，才能开国，所以你要创事业，一定是阳刚之才，那你知道你是柔的，那你用阳刚之才，那你也只能守到基业而已，不能够创新业。这在蛊之道里面都提到。
 大家来看占卜：
 
-#### 3.读图
+#### 4.读图
 
 ![山风蛊](https://preview.cloud.189.cn/image/imageAction?param=E34E44FCB4B1003939D1463DEAA6AC1EAF1508ED20CCA499893F577B2D3CFF584FEF97AE5690D0C64ED71731ED6F5177C2A5E83558D6936FF84F0C924C411825AEB2B50B4C463B1C03736F9CB66F919C0E2022C22766CDBAAB2D1A1BAAF8F3C2FE8DD9831A9C747FA9EF505D918238AD)
 
@@ -266,7 +267,7 @@ tags:
 
 我就卜过，人来问事业，一卜卜到了啊，那我婚姻如何，会啊，会在一起，可是没有正式的名分，为什么，因为你们两个在一起是为了利而合的。并没有感情的合。当然东西相拜，代表东边和西边的国家，大象可以看到这个。
 
-#### 4.阳宅
+#### 5.阳宅
 
 阳宅部分呢，山风蛊，少男居长女的位置。
 
@@ -279,12 +280,13 @@ tags:
 
 ### （三）地泽临 [䷒]
 
-#### 1.卦象
+#### 1.天机道
 
 蛊之后呢，地泽临，临卦。地卦是三阴，则卦是兑，是少女，首先，诸位知道，临者，大也，有事之始后，事情只要开始了以后，就会大。不管结果是好还是不好，结果就是慢慢越来越大，所以大在始之后，所以临卦在有事之后，慢慢就大了，大了就临了。自然界，天机道，天地之间，为什么有地泽临，比邻在一起的有两个，一个是水地比，诸位学过水地比了，地在水上，这两个永远不分开，靠在一起，这是千古之道，那现在泽上面有地，沼泽在这边，地在这边，沼泽跟地连着的地方是岸，这是最邻近的地方，懂不懂，临者，最临近的地方，所以看到这个邻近的地方，天地万物，这两个最靠近，相邻近，那为什么看这个呢，这个就是要告诉我们，如果你临人、临事，你是明君，临天下的时候，要怎么办，这就是临卦的意思。临之道，这就进入人间了。自然界的象就跑到人间来。
 
 那诸位看卦，12，下面是阳刚，上面都是阴，所以12你刚开始方盛的时候，戒就临了，一开始就戒，戒盛实际上就是讲这个卦，戒在方盛之时。刚开始盛的时候，就开始警戒了，为什么要警戒，一个知道戒盛的人，一定不会自满，人绝对不可以自满，**不可自满，为长久之道。** 可以持久，人如果知道不可以自满，富贵都会长久，永远不要自满。
 
+#### 2.人间道
 那现在的人呢，不是这样子的，今人，临富而骄，我是富人啊，我很了不起啊，飞机我都有了，你讲的话我听不懂哦，我没有口才，不听你讲，反正我就是这样子，大坏蛋啊，不学无术的人。你说你有术，跟我谈谈看，看你读的书多还是我读的书多。临富而骄，那遇到这样人的时候，这种人一定为了安乐而坏纲纪，我们国家的法律政治，他一定不管，只要有临富而骄的象，你看这个临富而骄的人，一定会坏纲纪。这种人还有一个，忘祸乱而专任奸邪。好的时候，他就忘掉了乱的时候，他专门用的是奸邪的人，反过来，是奸邪的人呢，专门是与富比邻，去巴结富人奉承富人谄媚富人，不好。
 
 君子之临，知道什么叫君子吗，我们刚才讲了，临人临事临天下，君子去临呢，只有一个原则，**以刚正而和顺**，他就用这个态度来待人。那由于知临之道，刚正而和顺，而且他能临明，他知道亲民，跟百姓接近，他才能用德来教化百姓，这是君子之临。
@@ -293,7 +295,7 @@ tags:
 
 还有呢，要敬告你们，要**敦临**，这个敦临啊，我们犯了最大的毛病在这里。就是敦厚之心而顺于刚，现在很多人，都知道一个人要敦厚一点，厚道一点，然后妈妈教儿子你要厚道，结果儿子很听话就厚道啦，结果不知道如何去识人，你如果不识人，对一个小人你也敦厚，临于他，你还在追随于他，敦厚是什么，反而会害了很多好人，所以敦厚一定要**顺于刚**，不要去乱临。临于事，你什么事情都以厚道去对待，所以监狱脸有很多人，都是你们的厚道造成的哦，一次一次的原谅，如果履霜坚冰至，如果你的小孩子，或者你的亲朋好友，或者你们同学，他在念高中，一个班六十几个人，只要他在外面偷了一个东西，会到班级里面，没有人愿意理他，他绝对不会偷第二次。然后女人跑出来啦，女人就是这样啊，我很柔顺，你看他好可怜哦，我就喜欢积弱扶贫，他好可怜哦，就去帮他，你不晓得他可怜的事情由头，对不对，结果他觉得你不错啊，最后他偷东西给你。那送你的花，是偷来的。这都是你搞出来的，你敦厚嘛。敦厚要看人嘛，不要乱敦厚，现在的人就是乱敦厚，要看清楚哦。
 
-#### 2.读图
+#### 3.读图
 
 诸位看占卜，看图，中间一个图：
 
@@ -312,7 +314,7 @@ tags:
 
 外夷之人，夷狄入侵，因为在中国很早以前，以前的匈奴啊夷狄都是靠弓箭，射杀野兽为生，所以他们有射雕英雄，所以是夷狄入侵，这个卦，前一次出现的时候，你让我读图给你看，战史上没有记载，汉高祖当年被困在白登山的时候，带领六千人，被匈奴几十万大军重重包围在山上，就是汉高祖在山上坐，老虎在山下啊，陈平怎么办呢，陈平出奇谋，救高祖，对象要找女人，结果呢，这个计策不太光明正大，所以史记上正史里面就不列入记载，结果很不小心在一本书里看到，陈平很厉害啊，深得易经之道，然后他当时就说，匈奴可汗冒顿的太太，他就派人带着黄金和一张美人的画像，很漂亮，找冒顿太太，太太收了红包啊，红包还是其次，使节很厉害，说我们现在汉王刘邦困在那边，他为了跟单于谈和，一旦放我走我就送上这张图上的美女，太太一听这还得了，这么漂亮的女孩子那我怎么办呢，对不对，就去跟冒顿单于吵，你赶快让他走，你把他围在那边干嘛，冒顿被她吵得没有办法，好了好了，把刘邦放掉好了，所以出使要对女人啊。对女人才有用，所以不要乱送礼，要送对人。
 
-#### 3.阳宅
+#### 4.阳宅
 
 阳宅：母居少女位，妈妈住在三女儿的位置：
 
@@ -323,7 +325,7 @@ tags:
 
 ### （四）风地观 [䷓]
 
-#### 1.卦象
+#### 1.天机道
 
 诸位看风地观。什么时候，观卦出现，因为我们临，是大也。万物之成，才大。大了以后，才有可视可观，所以观是临的续卦。**事物大了，这个时候再去观察。** 观就是看的意思。
 
