--- a/UPLD/倪海厦_天纪012_案例民国50年、55年、火雷噬嗑、山火贲、山地剥、地雷复.md
+++ b/UPLD/倪海厦_天纪012_案例民国50年、55年、火雷噬嗑、山火贲、山地剥、地雷复.md
@@ -158,7 +158,7 @@ tags:
 
 ### （一）火雷噬嗑 [䷔]
 
-#### 1.卦辞
+#### 1.天机道
 
 火雷噬嗑。这个前面是风地观卦。观之后，会有噬嗑的现象，观之道，我们要周观，观了以后，我们看的很清楚以后，我们会相聚在一起，好像诸位来这里上课，同道会相聚在一起，聚在一起的时候，人的聚，**观后必有聚合**。但是人一聚合的时候，人以群聚，中间一定会有隔阂，有间隙，因为有聚合，有间隙，所以就会有噬嗑的象出现，噬嗑是什么，**噬嗑是咬东西的象**，你拿一个东西放在嘴巴里面咬，咬碎掉然后吞下去，这个动作，就叫做噬嗑。
 
@@ -166,7 +166,7 @@ tags:
 
 所以说如果是，第一个他提出来了，**刑法之道，要查真伪**，知道它的真伪，才知道阻隔的原因，这个时候可以把间隙去掉。所以**法最主要在设防**，预防事情发生，还有教明，懂法的话，还要设防，知道什么是犯法的不能去做，很多人犯罪的时候还不知道自己犯罪。这是因为我们教育没有弄得很好。教育没有把人民教好的原因是因为有问题，所以古代的君王不喜欢百姓读太多书，你最好懵懂，你犯了法都不知道，最好我来讲，懂不懂我的意思，你犯法了我说你犯法了我不教你预防犯法我就直接讲你犯法了，会让百姓怕你，所以过去统治者最喜欢愚民。
 
-#### 2.卦象
+#### 2.人间道
 
 那这个卦象呢，诸位看这个卦，上面是火，离是中虚，雷是震仰盂，火雷噬嗑，这个火在天地之间的相是明，雷呢是动，所以呢是以明而动，明了了以后才能有所动作，所以我们现在当官，很多人都知道清官很好，清官要明哦，清官很好但是不明怎么办，诸位知道那是清官误国，所以一定要明，明要像火一样，照耀所有的万物。 所以明而动，那雷本身有威的象，所以易经说，**明照而威权**，这是法的象，两个，一个是明照，一个是威权，这就是法要掌握这两个原则。
 
@@ -206,7 +206,7 @@ tags:
 
 ### （二）山火贲 [䷕]
 
-#### 1.卦象
+#### 1.天机道
 
 你要是不小心把它念成贲，也无所谓啦，不要被字形绑到。贲卦是从噬嗑卦来的，噬嗑卦咬合了以后，**合聚之后，必有文饰，这个饰呢就是贲**。把各种电路连在一起，合在一起，我们给他一个名字，叫做录音机，名就会出现。贲的道，讲的就是人的外饰，外饰的程度。 为什么叫山下有火呢。这个山下有火的时候，火一点起来，照在那个地方，火一点起来，山下的草木可以看的很清楚，火一照，草木都好像染上了色泽一样。这就是文饰。外表，衣服啊，也是饰，所以我们外在的，就是求饰，也就是易经讲的山火贲。
 
@@ -247,9 +247,9 @@ tags:
 
 这个剥卦的来源是贲之极。万事到了极限，太过了，而招剥，剥就是损害啊，脱落啊，招凶。诸位看卦爻，从1到5都是阴，到最顶才是阳，意思就是说，如果你一开始发现小人，你不阻止到，到最后阳爻了，就已经很剥了，懂不懂我的意思。这个由下而上，由内而外，这是剥的象。山在上面，地在下面，诸位知道，如果地在山的上面，叫做地山谦，山在上面，地在下面，山你再高大好了，都是依附在地上面，那你要让山受到损害剥落，一定是在地下面有问题，那剥，你看，由内而外，由下而上，你哪天出去的时候，或者到一个地方上班，你一去，你一看不对，周围看到你的样子不对，你就知道，剥之道来了。这个剥之道一定个由内而外，造成你今天的剥，可能来自你的太太，来自你的朋友，了解你的人才剥得到你，一个国家会受到剥害，也是由内而外，反过来，我们要把一个国家打败，也是从内而外把它打败。所以最坚强的堡垒是从内部开始破坏的。所以过去的军师打仗也是用剥，如果利用剥，剥之道一定是从里面开始剥，派人当间谍奸细进去。由内而外。
 
-#### 1.卦象
+#### 1.天机道
 
-卦象看起来，山呢是外止，地是什么，内顺，外卦是止，内卦是顺，是为剥的象。简单举个例你就懂了，你看那个小孩子一出来，哟怎么那么乖啊，外面不敢动，然后内心又很柔顺，这就是他的智慧被大人剥削了，小孩子呢训练他，你要让他平常心，小孩子有童蒙啊，他什么都好奇，什么都问，开朗的好，一看这个小孩子怎么搞的，外止内顺，什么都是乖宝宝，就完了。剥的象就出来了，大人来剥小孩子的智慧，你想尽办法把你小孩子教成乖宝宝，就是想尽办法让他从聪明变成笨蛋。知道不知道，一定要让他平常心，让他明辨是非，不要让他知道什么样的事情，都要让他自己去看，让他平常心，有开放的智慧去考虑，就深思啊，才行哦。什么东西都去制止制止，哦，结果这个小孩子就是毁在你手上面，所以教很重要，千万不要剥。现在很多人就是想办法把小孩子教成这样。很可怕哦。
+天机道看起来，山呢是外止，地是什么，内顺，外卦是止，内卦是顺，是为剥的象。简单举个例你就懂了，你看那个小孩子一出来，哟怎么那么乖啊，外面不敢动，然后内心又很柔顺，这就是他的智慧被大人剥削了，小孩子呢训练他，你要让他平常心，小孩子有童蒙啊，他什么都好奇，什么都问，开朗的好，一看这个小孩子怎么搞的，外止内顺，什么都是乖宝宝，就完了。剥的象就出来了，大人来剥小孩子的智慧，你想尽办法把你小孩子教成乖宝宝，就是想尽办法让他从聪明变成笨蛋。知道不知道，一定要让他平常心，让他明辨是非，不要让他知道什么样的事情，都要让他自己去看，让他平常心，有开放的智慧去考虑，就深思啊，才行哦。什么东西都去制止制止，哦，结果这个小孩子就是毁在你手上面，所以教很重要，千万不要剥。现在很多人就是想办法把小孩子教成这样。很可怕哦。
 
 #### 2.人间道
 
@@ -279,6 +279,7 @@ tags:
 - 第六，冠巾挂树上，有求去的象，我不干了，还有安乐的象。过去历史上有出现过，为什么安乐呢，白色的丝巾挂在木头上面，这不是樂嘛。所以杨贵妃就死在这上面，如果属木上面带一个帽子，不就是宋嘛，如果树木上面加一个尺，不是朱嘛，所以中国人是读图，你不要读字。
 
 #### 　４.阳宅
+
 阳宅上面来说，整个山地剥，我把总卦讲给你看。比如说这个人居住在很危险的地方，好像风中的残烛一样，心乱如麻，无计可施，为什么呢，阴人当道。这个时候，以退为乐。读完了，是不是？ 所以处剥之时呢，闪开一遍，闪远一点。等到剥到极就好了，天下大乱的时候你再出来，人心思变。
 阳宅上面呢，**三儿子居母位。**
 
@@ -293,11 +294,13 @@ tags:
 
 ### （四）地雷复 [䷘]
 
+#### 1.天机道
+
 地雷复。复卦和剥卦，刚好是反的。 剥到极限了以后，人民会思变，思治，治世会来临，君子之道始复，刚开始恢复的时候，所以阳生在下面，众阴还在上面，懂不懂，复之道就在这里，刚开始，始复。那么刚开始始复的时候，有人发现，这样很好啊，你光是一个人，独木难支，难撑大局。一个人力量太弱，一定要众心协力，就成了哦，如果人人敢讲话，每天台北市几百万人统统聚过来说
 
 李登辉你不能竞选总统，他就下台了。可是君子之道始复。一定要众人协力才能够成。这个卦呢，外顺内动，如果你没有动，止的话，就是剥啦。雷在地下，易经也讲阴阳，易经没有电学，但是他知道阴和阳碰到一起，就会生雷，那雷刚开始，初阳的时候，雷在地下面，就好像冬天，冬天的时候，冬天到很冷的时候就到冬至了，冬至的时候，同一时间，阳就开始出生了，所以阴到极限会变成阳，那我们现在解释，老师这很难领悟啊，很简单啊，药材中最热的是人参，很热啊，但是人参产在最冷的地方。那硫磺是很寒凉的药，藏在火山口，这都是物的性，所以雷在地下面的时候，就是始复之时。
 
-#### 1.人间道
+#### 2.人间道
 
 人间道。
 
@@ -314,7 +317,7 @@ tags:
 
 很多人眼睛就是这样子，好累哦。所以你发现你周围两眼无神，眼睛涣散，睁开的，好像早上睡觉起来没有睡醒的样子，执迷不悟。这种人不能动，一动就是纠纷来了。都是trouble maker。
 
-#### 2.读图
+#### 3.读图
 
 好图上面来看，占卜。
 
@@ -329,7 +332,7 @@ tags:
 - 第五，一个兔子。兔子呢，代表属兔的人，或者是刘姓的人。老师刘跟兔有什么关系，劉上面不是一个卯嘛，卯是不是兔子啊。金刀插在地上面，就是兔子，讲的就是刘。所以汉朝开国的刘邦，姓刘，金刀插在地上，读图读到，所以刘是我们的大姓。当然，李也是我们的大姓啊，唐朝李家天下。
 - 第六，一只老虎，讲什么，肖虎的人，王姓的人。
 
-#### 3.阳宅
+#### 4.阳宅
 
 阳宅部分，母居长子位，成格，妈妈住到大儿子的位置，地雷复，父母住在东宫上面，对于父亲来说，是天雷，对妈妈来说就是地雷。
 
