--- a/UPLD/倪海厦_天纪013_案例民国46、33、28、41年、天雷无妄、山天大畜、山雷颐、泽风大过.md
+++ b/UPLD/倪海厦_天纪013_案例民国46、33、28、41年、天雷无妄、山天大畜、山雷颐、泽风大过.md
@@ -121,7 +121,7 @@ tags:
 
 ### （一）天雷无妄 [䷘]
 
-#### 1.卦象
+#### 1.天机道
 
 这个无妄卦本身是复的续卦，为什么？这个地雷复，君子恢复过来，这个**无妄本身这两个字的意思是至诚。**所以当君子之道复的时候，我们要用至诚的心，至诚的态度，才能够通行无阻，这就是天雷无妄的意思，那上面叫做至诚。你看这个卦上面写的，内卦是东，雷就是动，外面是天，外健，以刚健而动，得正理而动，这叫做无妄。所以，我们人，动必以天，所谓天，就是正理，时机，才能动。现在的人，今人，动以人欲，因为欲望而动，不是因为天时而动。动以人欲，招凶。
 
@@ -154,7 +154,7 @@ tags:
 
 ### （二）山天大畜 [䷙]
 
-#### 1.卦象
+#### 1.天机道
 
 无妄卦之后，是山天大畜。这个山天大畜，山在上面，乾为天在下面。这个山下有天，天是至大的，最大的东西，结果还能在山下，是大畜的意思。为什么是无妄卦之后，当人饰以至诚的时候，就可以大积，会累积，所以不管你做什么，你只要至诚对人家，你就会累积很多人脉，不管你说是累积什么阴德阳德功德。你至诚是出发点。都可以累积到很多东西，所以大畜的意思，就是大积，大有积蓄的意思，大积的象。
 
@@ -191,7 +191,7 @@ tags:
 
 ### （三）山雷颐 [䷚]
 
-#### 1.卦象
+#### 1.天机道
 
 颐卦，各位不要被卦绑住了。这个山雷颐，物畜之后，畜就是累积，累积之后，物畜之后，乃可养，就好像小孩在妈妈肚子里面，十个月慢慢积累大了，出来可以养了。所以颐，就是**讲养之道**。你看这个卦，中间都是空的，上下是两个阳的，就像嘴巴张开来的样子，口中含物，咬东西，养，吃东西的象。外实中虚的象，两边是实，中间是虚的象。这个人要养，就好像小到自己吃东西在养自己，天地之间可以看到天地养万物，古代的圣人养贤，人养生，养形、养德。如果养人，如何带领你的手下，统统都是颐养之道，所以**山雷颐** 专门讨论如何去养。
 
@@ -233,7 +233,7 @@ tags:
 
 ### （四）泽风大过 [䷛]
 
-#### 1.卦象
+#### 1.天机道
 
 养而后有成，物成必动，动则有过。所以大过，就是经历了这个阶段过来。就像小孩子一样，养成以后，他会动，对不对，上学，要是小孩子在那不动还得了，动的时候有时候太过了，小到杯子打破，大到外面闯祸。就会有过。
 
