--- a/UPLD/倪海厦_天纪014_案例民国46、49、31、38、坎为水、离为火、泽山咸、雷风恒、天山遁.md
+++ b/UPLD/倪海厦_天纪014_案例民国46、49、31、38、坎为水、离为火、泽山咸、雷风恒、天山遁.md
@@ -191,7 +191,7 @@ tags:
 
 ### （二）离为火 [䷝]
 
-#### 1.卦象
+#### 1.天机道
 
 离为火。上下卦都是离，重卦。离本身是**丽**，天下万物如果陷于险中，必有所附丽，所以离卦是坎卦的续卦。比如说你今天犯法了，被抓在里面，两个人就变成一党了。小人，他没有办法了，被君子遗弃了，他就会在很多太太、小姐面前装的很可怜，博取人家的同情。没有关系，我专门济弱扶贫，你很可怜，我来帮助你，你就是看着小人等把他弄的很高大的时候，反过来咬你的就是他，这种人还至死不悟的很多，很多人是装出来让你通情他，这个都不好。
 
@@ -233,7 +233,7 @@ tags:
 
 ### （三）泽山咸 [䷞]
 
-#### 1.卦辞
+#### 1.天机道
 
 进入第31经，下经开始了，第一个卦泽山咸，什么意思？**咸本身就是感**，感觉、感应。为什么咸卦是下经第一个卦？因为天地生万物，生万物之后就会有男女出现，有男女之后就会有夫妻，有夫妻之后就会有父子，有父子之后有君臣，就会有上下之别。
 
@@ -275,7 +275,7 @@ tags:
 
 ### （四）雷风恒 [䷟]
 
-#### 1.卦辞
+#### 1.天机道
 
 为什么恒卦是在咸卦之后？男女之间有感之后就结成夫妇了，成为夫妇以后，夫妻之道在易经里面谈的就是恒久，算命是赞合不赞离，这是基本的原则。但是实在不行的要舍，易经并没有说你先社去抢劫，你也陪着去，不可以的。这个卦整个讲的就是什么时候持恒，对的地去持恒。
 
@@ -318,7 +318,7 @@ tags:
   
 ### （五）天山遁 [䷠]
 
-#### 1.卦象
+#### 1.天机道
 
 天山遁。上面是天，下面是山，第三个是男孩子。前面的恒卦，恒者久也，物不可终久。我们讲物，你的稻谷放在谷仓里面，不能放很久，所以我们在部队吃的推陈的米，永远在吃三年以前的米，永远都存粮那么多。久则有去，遁就是去的意思，不单单是指退休，是指离开、去的意思。在外相看，天在上、山在下。天性是阳，向上。山体大而止，这个自然的象就是遁。
 
