--- a/UPLD/倪海厦_天纪015_案例民国17、28、30、28、手相、雷天大壮、火地晋、地火明夷、风火家人、火泽睽.md
+++ b/UPLD/倪海厦_天纪015_案例民国17、28、30、28、手相、雷天大壮、火地晋、地火明夷、风火家人、火泽睽.md
@@ -1,5 +1,5 @@
 ---
-title: 倪海厦_天纪015_案例民国17、28、30、28、手相、雷天大壮
+title: 倪海厦_天纪015_案例民国17、28、30、28、手相、雷天大壮、火地晋、地火明夷、风火家人、火泽睽
 date: 2023-03-20
 categories:
    - 医学生活
@@ -251,35 +251,35 @@ tags:
 
 第五个呢，枯木生花，代表晚发，发的很晚，禄在贤书，禄含在书，代表禄与命到了，这个命是命令，人事命令，升官的命令，不是你命到了，升官的命令。一堆金宝，这个金宝呢，财禄丰收的象，财禄很多。如果你是卜到生意，生意会赚钱，但是有人背，恐怕凶事儿会发生。
 
-那这个卜吉恶，金宝在地上，就有焚金之象，烧金子之象，占吉恶是大凶，主丧服，2人去1，两个人去1个，夫妻要死一个。人立在水边，立在这边，水在这边，泣，哭泣。左上角三点在石头上面，三点在石头是心，艰辛，人心在石头上不动，如果你把整个卦读起来。
+那这个卜吉恶，金宝在地上，就有焚金之象，烧金子之象，占吉恶是大凶，主丧服,2人去1，两个人去1个，夫妻要死一个。
 
-比如说一个人卜事业如何，卜下去的时候，卜到火地晋，事业会进步，但是恐怕会有丧服，恐怕会，家人会出人命，夫妻之间会死一个人，要注意。
+人立在水边，立在这边，水在这边，泣，哭泣。左上角三点在石头上面，三点在石头是心，艰辛，人心在石头上不动。
 
-然后你讲完以后，你一看到旁边三点在上边，你卜完了，他心不动，他不会听，读出来。卜到这个卦，绝对你讲这个凶，你不会接受，这很好玩儿，人在大限到的时候就不会听，不会听，是你死又不是我死，那没办法。
+如果你把整个卦读起来,比如说一个人卜事业如何，卜下去的时候，卜到火地晋，事业会进步，但是恐怕会有丧服，恐怕会，家人会出人命，夫妻之间会死一个人，要注意。
 
-所以我说我们那个邓某某人旁边，一定有高人在旁边，高人不难，高人很多，高人真的很多，隐士的，现世的人一定有高人，问题是他怎么能让他这么信任他，这个不简单。
+然后你讲完以后，你一看到旁边三点在上边，你卜完了，他心不动，他不会听，读出来。卜到这个卦，绝对你讲这个凶，你不会接受，这很好玩儿，人在大限到的时候就不会听，不会听，是你死又不是我死，那没办法。所以我说我们那个邓某某人旁边，一定有高人在旁边，高人不难，高人很多，高人真的很多，隐士的、现世的人一定有高人，问题是他怎么能让他这么信任他，这个不简单。
 
 #### 4.阳宅
 
 阳宅，阳宅呢，火地晋，二女居母位，成格，你的名字叫二女儿，他不去住，好好不去住，跑到妈妈位置去住。
 
-- 第一个，性柔如慈母之人。所以如果你结了婚有了孩子，你看看你妹妹还没有结婚，那你孩子找不到人，那你把你妹妹，妹妹你去睡那个房间，只要一睡，她就是保姆了。然后帮你养孩子那个人，她就是养的不是她的孩子，叫里明子，对吧，就是养了别人的孩子.鼻头纹就一条线就出现，很明显。
+- 第一个，性柔如慈母之人。所以如果你结了婚有了孩子，你看看你妹妹还没有结婚，那你孩子找不到人，那你把你妹妹，妹妹你去睡那个房间，只要一睡，她就是保姆了。然后帮你养孩子那个人，她就是养的不是她的孩子，叫里明子，对吧，就是养了别人的孩子，鼻头纹就一条线就出现，很明显。
 - 婚晚至40岁以后，40岁结婚。
 - 第三个，一样，偏房或二房。然后这个人住在火地晋上财禄非常节省，非常省钱。如果是在火地上面的人，一个例外，对象为鸡，大吉。除此之外都是好，不管她是怎么样，40岁以后结婚，对象是鸡都可以。
 
 ### （三）地火眀夷 [䷣]
 
-#### 　1.天机道
+#### 1.天机道
 
-火地晋，晋火明夷卦，把晋反过来叫明夷卦，好象表里一样。火地反过来叫地火，火在地下面.刚刚是是火在上面，所以是诸侯之象，因为它的照亮，只照亮一个地方。这样子火跑到地上面去了，什么意义卦？因为物进，我们都会人会升迁或者是长大，物进物易，一定会受到伤害，有伤.所以我们常常不是说，一物都很顺随。所以物进了以后，一定会有伤到。就好像我们汽车开了，引擎里面磨磨自然一定会磨损，一定会有伤。所以明夷卦是什么？火地晋的序卦，上面是地，地中须，易火明。那刚刚呢是日出地上，是进而盛的现象，现在是日出地下，太阳跑到地下去了，光亮跑到地底下，这个卦是昏暗之卦。这个卦讲的是暗君在上，明者见伤。上面的君王表里不一样暗地里搞阴的，明者见伤的时候，这个地火明夷讲的就是这个。玩阴的。
+火地晋，晋火明夷卦，把晋反过来叫明夷卦，好象表里一样。火地反过来叫地火，火在地下面，刚刚是是火在上面，所以是诸侯之象，因为它的照亮，只照亮一个地方。这样子火跑到地上面去了，什么意义卦？因为物进，我们都会人会升迁或者是长大，物进物易，一定会受到伤害，有伤。所以我们常常不是说，一物都很顺随。**所以物进了以后，一定会有伤到。** 就好像我们汽车开了，引擎里面磨磨自然一定会磨损，一定会有伤。所以明夷卦是什么？火地晋的序卦，上面是地，地中须，易火明。那刚刚呢是日出地上，是进而盛的现象，现在是日出地下，太阳跑到地下去了，光亮跑到地底下，**这个卦是昏暗之卦**。这个卦讲的是**暗君在上，明者见伤。** 上面的君王表里不一样暗地里搞阴的，明者见伤的时候，这个地火明夷讲的就是这个，玩阴的。
 
-玩完阴的以后每天拿着圣经去唱歌，我是基督教的，我是圣经的门徒，我们说行话，最坏了。现在呢他进入人间道以后，这个地在火上面，明被遮掉了。进入人间道，那君子呢用明夷之道n什么叫做君子？他如何用明夷之道。当遇到这个时机，时机遇到这个时候，卦是，地是顺，火是内明，对不对？君子看到，明夷是伤，我讲过事情也在，解也在这个这里。君子用明夷知道，这个事情是明夷的，好，他外顺比避祸灾那一年以求自制。
+玩完阴的以后每天拿着圣经去唱歌，我是基督教的，我是圣经的门徒，我们说行话，最坏了。现在呢他进入人间道以后，这个地在火上面，明被遮掉了。进入人间道，那君子呢用明夷之道，什么叫做君子？他如何用明夷之道。当遇到这个时机，时机遇到这个时候，卦是，地是顺，火是内明，对不对？君子看到，明夷是伤，我讲过事情也在，解也在这个这里。君子用明夷知道，这个事情是明夷的，他外顺避祸灾，内明以求自制。
 
 因为知道现在好人当权，各方面都是小人，外顺来避祸，内明，心知肚明，但是我们和，但是中央说的一句话，和而不流，小人很反的流而不和，那和而不流，内明就自制。我不宣颐，你做的很多事情，那也是顺，没有办法，这是君子之道，遇到明夷的时候怎么处理。
 
-好，那伤呢，这个伤有一个标准，易经讲了君子用晦和明，这是晦明，这个晦明很有意思。老师竟然用这个明，怎么用这个晦呢，这个就是明察天下的事情有一个标准，你不要太明了，就好像办案一样，你不要把什么都弄出来，总是法内要有情，要有人，当真言给你们算，无足轻重，不要去追，是个人但是算了，就好像畏罪就算了，你把他什么都查出来，什么都去搞，也不好.所以君子要用晦而明这个，不极其明察，做事情到了警告，达到处罚就够了。就可以了，达到处罚的目的就可以了。好，才能够容物，告众，众人才会来。如果你自任，这不算小人，易经没有说这个小人，说这个是君子。如果自任这个刚明，太刚了明，这个无所不察。有一些得过且过的没有关系，你会作为愤怒不已，会造成易经说的失众之道。
+那伤呢，这个伤有一个标准，易经讲了君子用晦和明，这是晦明，这个晦明很有意思。老师竟然用这个明，怎么用这个晦呢，这个就是明察天下的事情有一个标准，你不要太明了，就好像办案一样，你不要把什么都弄出来，总是法内要有情、要有人，当真言给你们算，无足轻重，不要去追，是个人但是算了，就好像畏罪就算了，你把他什么都查出来，什么都去搞，也不好。所以君子要用晦而明这个，不极其明察，做事情到了警告，达到处罚就够了，就可以了，达到处罚的目的就可以了。才能够容物，告众，众人才会来。如果你自任，这不算小人，易经没有说这个小人，说这个是君子。如果自任这个刚明，太刚明，这个无所不察，有一些得过且过的没有关系，你会作为愤怒不已，会造成易经说的**失众之道。**
 
-因为一个人绝对没有办法明察天下的事情，好了，旁边A、B、C三户住在这里，A也有做，B也有做，C也有做，你把A查了B放掉了，人家就会怀疑到你，了解我意思吗？反而很多灾祸因为你明太多而影响。当你处罚处到一个绝然的话，他们AB就会说，C比较侥幸，看罪到什么程度。所以用晦而明，这个明真正的真明，真明就是用晦，而不是全明，这个水太清澈了就没有鱼在里面，人呢太清则自心则无土，水自清则无鱼，自然的道理都是一样的。
+因为一个人绝对没有办法明察天下的事情，好了，旁边A、B、C三户住在这里，A也有做，B也有做，C也有做，你把A查了B放掉了，人家就会怀疑到你，了解我意思吗？反而很多灾祸因为你明太多而影响。当你处罚处到一个绝然的话，他们AB就会说，C比较侥幸，看罪到什么程度。所以用晦而明，这个明真正的真明，**真明就是用晦，而不是全明，** 这个水太清澈了就没有鱼在里面，水自清则无鱼，自然的道理都是一样的。
 
 #### 2.读图
 
@@ -289,45 +289,42 @@ tags:
 
 占卜，君子有晦明之界。占卜的时候。
 
-- 第一个夫人在颈中，代表女人招灾，祸就是颈，是不是在这里，脖子，颈，或者是加内有灾。
-- 第二个老虎在外边看场，外人在外边虎视眈眈看，钱缺，那个钱变两半，财伤，伤到钱财。
+- 第一个夫人在井中，代表女人招灾，祸就是颈，是不是在这里，脖子，颈，或者是加内有灾。
+- 第二个老虎在外边看场，外人在外边虎视眈眈看
+- 钱缺，那个钱变两半，财伤，伤到钱财。
 - 第四个逐路，一个人在上面赶路，有财失的项目。还有这个争，争相为禄，这个争是为了财禄。
 
 还有呢如果卜到你是陈胜吴广卜到，想逐路到中原，想揭竿而起，逐路中原。猴在人和鹿的中间，有没有，你看那个鹿，那个猴子刚好在人和鹿的中间，那个鹿围着那个猴子在跑，人在后面赶，这个代表说猴在作梗，猴姓的人在作梗，挡在中间，不让你成。
 
-还有一个猴子上面有一个L形的尺，有没有，这个尺代表工匠，因为这个尺只有工有，匠，将也，代表的害死武官，武官的人。还有你看那个鹿是不是回头，鹿回头，回禄，什么叫回禄之灾？火灾。
+还有一个堠上面有一个L形的尺，有没有，这个尺代表工匠，因为这个尺只有工有，匠，将也，代表的害死武官，武官的人。还有你看那个鹿是不是回头，鹿回头，回禄，什么叫回禄之灾？火灾。
 
 所以如果你卜到卦，相信一点，有火灾。人手上有木条，如果你卜官，你问我这个官继续当下去好不好？人上面拿一个木条，就是休官，可以停下来不要干了，休的意思。
 
 #### 3.阳宅
 
-阳宅部分会造成明夷，很多明夷卦，周围常常在临床上可以看到明夷卦。结果阳宅上面一看，母居二女住，女的名字叫妻子，叫妈妈，结果西位的位置不去住，结果住到二女儿的位置住到南边。住到南边以后，夫妻都住南的话，先生是天火同人，太太是什么地火明夷，明夷卦。
+阳宅部分会造成明夷，很多明夷卦，周围常常在临床上可以看到明夷卦。结果阳宅上面一看，母居二女位，女的名字叫妻子，叫妈妈，结果西位的位置不去住，结果住到二女儿的位置住到南边。住到南边以后，夫妻都住南的话，先生是天火同人，太太是什么地火明夷，明夷卦。所以有的时候你看夫妻两个，先生身体很好，她的很好，或者是先生身体很差，她的身体很好，不能乱睡。
 
-所以有的时候你看夫妻两个，先生身体很好，她的很好，或者是先生身体很差，她的身体很好，不能乱睡。
+- 第一个，性刚。住在明夷卦的太太，性刚烈如火，性爆裂如火，如果你家刚好是你太太住在地火明，你家隔壁的太太住在地水司两个人干起来，两个老公拉两个老婆，两个人拉两个老婆，两个人这样子，很凶。
+- 第二个，必有隐疾，暗灾，难言，不好讲。很多破财，身体上很多妇科的病，不好意思讲。
+- 第三个，太太会破财，诸事不顺。
+- 第四个，个性上面来说呢，易受小人言。我们为什么要你去分，如何分辨出真话，谣言，谣言止于智者，为什么？受到小人言，易受小人言，自害。别人那边三姑六婆讲到，陈太太你知不知道，那天菜市场我看到你老公跟哪个在那里，想想你老公在那里干什么，对不对。谣言就这样制造出来，为什么？她看你夫妻太好了，她妒忌，不要乱信。好，如果你在地火明夷卦，假的也给你说成真的，你还听成真的了，不问三七二十一，先生回来先修理一顿，很倒霉。一段时间之后你先生眼尾就挂上了。
+- 第五个，在明夷卦上面，见血光必凶，开刀的话都是凶的，癌症开刀都扩散，开刀都开不好，不是说他本身开刀不好，而是开完刀以后状况不好了，开刀都不好，懂不懂我意思。
 
-- 住在明夷卦的太太，性刚烈如火，性爆裂如火，如果你家刚好是你太太住在地火明，你家隔壁的太太住在地水司两个人干起来，两个老公拉两个老婆，两个人拉两个老婆，两个人这样子，很凶。
-- 第二个，必有隐疾，暗灾，难言，不好讲。很多破财，身体上很多妇科的病，不好意思讲。还有呢
-- 太太会破财，诸事不顺。
-- 第四个个性上面来说呢，易受小人言。我们为什么要你去分，如何分辨出真话，谣言，谣言止于智者，为什么？受到小人言，易受小人言，自害。别人那边三姑六婆讲到，陈太太你知不知道，那天菜市场我看到你老公跟哪个在那里，想想你老公在那里干什么，对不对。谣言就这样制造出来，为什么？她看你夫妻太好了，她妒忌，不要乱信。好，如果你在地火明夷卦，假的也给你说成真的，你还听成真的了，不问三七二十一，先生回来先修理一顿，很倒霉。一段时间之后你先生眼尾就挂了。
-- 第五个在明夷卦上面，见血光必凶，开刀的话都是凶的，癌症开刀都扩散，开刀都开不好，不是说他本身开刀不好，而是开完刀以后状况不好了，开刀都不好，懂不懂我意思。
-
-好，那这个卦常常有一个现象，夫欲救妻力不足，人力做不到。先生把鹿赶走，我不要钱，我要太太，太太陷在颈里面，陷在颈里面是自陷进去的，救都来不及救，所以地火明夷卦的时候非常的不好。所以如果哪一天你发现到习惯，我先生打鼾打的那么凶，刚好住西北角，每天吵死人，先生不住西北角不出声，好了，先生你去住南边好了，先生好了，南边就是天火同人，太太还是在地天台的位置，这都好了，位置可以随时调整的懂不懂。有的人因为打鼾，结果住到西南角的时候去了，对不对，那不知道，跑错位置去住n.可能他外面形的原子是打鼾。
+好，那这个卦常常有一个现象，夫欲救妻力不足，人力做不到。先生把鹿赶走，我不要钱，我要太太，太太陷在颈里面，陷在颈里面是自陷进去的，救都来不及救，所以地火明夷卦的时候非常的不好。所以如果哪一天你发现到习惯，我先生打鼾打的那么凶，刚好住西北角，每天吵死人，先生不住西北角不出声，好了，先生你去住南边好了，先生好了，南边就是天火同人，太太还是在地天台的位置，这都好了，位置可以随时调整的懂不懂。有的人因为打鼾，结果住到西南角的时候去了，对不对，那不知道，跑错位置去，可能他外面形的原因是打鼾。
 
 ### （四）风火家人 [䷤]
 
 #### 1.天机道
 
-明夷卦后面呢，再来就是家人卦，我们刚刚讲的这个明夷的夷，夷者伤也嘛，伤于外，必返于家，一个人小孩子在外面跟人家打架打伤了，第一个是逃回家找妈妈。所以伤于外比反于家。所以明夷卦之后就是风火家人卦。家人卦呢，专门讲治家之道，讲父子，夫妻之道，好，这个长幼有序之道，统统在家人卦里面提到，我们这里没有办法-的讲，我们提重点出来。
+明夷卦后面呢，再来就是家人卦，我们刚刚讲的这个明夷的夷，夷者伤也嘛，伤于外，必返于家，一个人小孩子在外面跟人家打架打伤了，第一个是逃回家找妈妈。所以**伤于外比反于家。** 所以明夷卦之后就是风火家人卦。家人卦呢，专门讲治家之道，讲父子，夫妻之道，这个长幼有序之道，统统在家人卦里面提到，我们这里没有办法一一的讲，我们提重点出来。
 
-过去我们老祖宗的观点，一个人的治家就等于治国，方法是一样的，形不一样神是一样的。诸位看，这个火上面有风，过去我们古人的观点，火生风行，烧了火以后起来，风就起来，的确是这样的，那个原子弹一大挂造成那个飓风，有没有。所以叫风自火出，叫做风从火出来，所以说有内治外，就是由内而致外，从里面发到外面出来的一种现象，一种状况，
+过去我们老祖宗的观点，一个人的治家就等于治国，方法是一样的，形不一样神是一样的。诸位看，这个火上面有风，过去我们古人的观点，火生风行，烧了火以后起来，风就起来，的确是这样的，那个原子弹一大挂造成那个飓风，有没有。所以叫风自火出，叫做风从火出来，所以说有内治外，就是由内而致外，从里面发到外面出来的一种现象，一种状况。
 
-所以治也样，你治家里面跟治国是一样的事儿，人间呢，第一个圣人，看到这个风，风自火出，看这个象。以前老祖宗没事儿，坐在那边生一堆火，晚上就会在那儿防蚊子，他就看这个火，风就开始吹了，看到自然界的象，他就已经知道知事必由内出。任何事情一定发生内，所以最坚，强的堡垒由内部破坏。事必由内出，知道因为事一定由内出，爆发内，爆发自止。所以圣人看到这个洞，就看到自然界这一个象，他就体会到什么，所言必有物，讲话一定有事实，言之有物，这个物讲的是所言有物，胜任所行必有恒。这个恒呢就是法度，法则，一定有一定的法则。这是圣人的家道。
+所以治家也是一样，你治家里面跟治国是一样的事儿，人间呢。第一个圣人，看到这个风，风自火出，看这个象。以前老祖宗没事儿，坐在那边生一堆火，晚上就会在那儿防蚊子，他就看这个火，风就开始吹了，看到自然界的象，他就已经知道知**事必由内出**。任何事情一定发生内，所以最坚，强的堡垒由内部破坏。事必由内出，知道因为事一定由内出，爆发内，爆发自止。所以圣人看到这个洞，就看到自然界这一个象，他就体会到什么，**所言必有物**，讲话一定有事实，言之有物，这个物讲的是所言有物，胜任**所行必有恒**。这个恒呢就是法度、法则，一定有一定的法则，这是圣人的家道。
 
-现在我们人的家道不是这样子，易经上头早就写好了，五千年写的就是这样子，今人的家道说的不是这样子，大皆，大部分人都是以情胜理，自己再错，儿子或者家里面人再错，还是自己家人，你懂不懂，比较包容。以情胜理，以恩来夺义，在正义和道理上面自己家人不对的，但是还想尽办法挽回，想尽办法帮他脱罪。
+现在我们人的家道不是这样子，易经上头早就写好了，五千年写的就是这样子，今人的家道说的不是这样子，大皆，大部分人都是以情胜理，自己再错，儿子或者家里面人再错，还是自己家人，你懂不懂，比较包容。以情胜理，以恩来夺义，在正义和道理上面自己家人不对的，但是还想尽办法挽回，想尽办法帮他脱罪。那易经上面谈到呢，这个家人卦，我们自己家以刚中有柔，不能全刚，你太过严也不行，太过严人心会变，人会变，跟家里面没有沟通，没有人敢讲话，你过柔，下面人会骑到上面来不行。
 
-那易经上面谈到呢，这个家人卦，我们自己家以刚中有柔，不能全刚，你太过严也不行，太过严人心会变，人会变，跟家里面没有沟通，没有人敢讲话，你过柔，下面人会骑到上面来不行。
-
-所以我们在相书中讲到要有威，这个威怎么解释呢？和凶不一样，这个凶，很多人很凶没有用，有的人凶了人家还不怕，要有威，人要有威。为了望而生惧，他不敢，对你怎么样，要有威。要威的话，一定要自制，从自己开始做。你自己都都没有要求自己，还要求儿子。你说儿子去KTV不好的，那天我在KTV碰到你，不然为什么知道KTV，所以说不清楚了。所以一定要利己，你要利己才能有威这是治家。
+所以我们在相书中讲到要有威，这个威怎么解释呢？和凶不一样，这个凶，很多人很凶没有用，有的人凶了人家还不怕，要有威，**人要有威。** 为了望而生惧，他不敢，对你怎么样，要有威。要威的话，一定要自制，从自己开始做。你自己都都没有要求自己，还要求儿子。你说儿子去KTV不好的，那天我在KTV碰到你，不然为什么知道KTV，所以说不清楚了。所以一定要利己，你要利己才能有威这是治家。
 
 #### 2.读图
 
@@ -335,34 +332,34 @@ tags:
 
 ![风火家人](https://preview.cloud.189.cn/image/imageAction?param=5F578540319EB8BD7AECEEED3D522170FCBF646811A3B7606E868DB17A5250F58230095BE270AE3CDC3AAB740612C5B08C805E2D47649B56157112DD97B4E8413686E81DA9A87D3A2FCFAA8F66E03C52AF157B667ACA6FF55C053479351A69F8F3988948303D821872FEA69E6368FF59)
 
-占卜的时候诸位看，家人卦的时候，我们卜到一个人张工，一个人一条腰带，官带在水旁边，五阴中有文书，贵人拜寿，富人洗手。
+占卜的时候诸位看，家人卦的时候，我们卜到一个人张工，一个人一条腰带，官带在水旁边，五阴中有文书，贵人拜寿，富人祈首。
 
-- 这个人张工代表暗算。暗算，破坏的意思。
+- 一个人张工代表暗算，破坏的意思。
 - 一个带在水边，带在水边，是不是这样，带在水边，带旁边加一个水，事情停滞不前，代表弃官，腰带丢掉了，我不干了。
-- 云中有文书呢，云里而有立书下来，突然的喜讯，突来喜讯。像我们这个孙某人校长不干了，突然来喜讯就当部长了。
+- 云中有文书，云里而有立书下来，突然的喜讯，突来喜讯。像我们这个孙某人校长不干了，突然来喜讯就当部长了。
 - 贵人拜寿代表授命，接受授命。
-- 第五个最难解的富人洗手，代表在风火家人代表家和，易经在讲家人卦的时候强调富人，必须要正，要正，所以有时候在家里面爸爸唱黑脸，太太唱白脸，好，比较正，比较好。一个黑一个白比较好。
+- 第五个最难解的富人祈首，代表在风火家人代表家和，易经在讲家人卦的时候强调富人，必须要正，要正，所以有时候在家里面爸爸唱黑脸，太太唱白脸，比较正，比较好。一个黑一个白比较好。
 
-你说我那天看到你在KTV对不对，儿子说谁说的，我妈妈带我去的，儿子没办法管了嘛。所以富人在这边，除了有家和之象，最难懂的在后边，叫做妻同。如果你卜到这个卦，你先生我现在，本人不干，不当官了，我辞职了回到家里，上面派令我到别的地方去，先生请问你，你太太同不同意去，我太太坚决反对，你不要去，听老婆的话，妻同。最难懂的是这个，要得到妈妈和家里女人的同意，女人旁边看的比较准。
+你说我那天看到你在KTV对不对，儿子说谁说的，我妈妈带我去的，儿子没办法管了嘛。所以富人在这边，除了有家和之象，最难懂的在后边，叫做**妻同**。如果你卜到这个卦，你先生我现在，本人不干，不当官了，我辞职了回到家里，上面派令我到别的地方去，先生请问你，你太太同不同意去，我太太坚决反对，你不要去，听老婆的话，妻同。最难懂的是这个，要得到妈妈和家里女人的同意，女人旁边看的比较准。
 
-所以这个卦告诉你，千万不要一意孤行，遇到这个事情的时候，这个事情停在那边不走，是有人在那边暗害，所以让事情停滞不前。那有突来的讯息是很好的信息，要由太太，你老妈，女人家同意你去，不要一意孤行，要听取她们的意见，她们不让去，你不要去。易经这个卦就是把女人写的帮助很大。
+所以这个卦告诉你，千万不要一意孤行，遇到这个事情的时候，这个事情停在那边不走，是有人在那边暗害，所以让事情停滞不前。那有突来的讯息是很好的信息，要由太太，你老妈，女人家同意你去，**不要一意孤行**，要听取她们的意见，她们不让去，你不要去，易经这个卦就是把女人写的帮助很大。
 
 #### 3.阳宅
 
-长女呢，这个要大声一点，我前边头皮发麻，我给你汫到部长，院长我都不会发麻，我很爽，讲到这个女人，易经讲女人我就很紧张。长女呢居二女位，大女儿住到二女儿位置，好好的大女儿位置不去住，住到二女儿的位置。
+长女呢，这个要大声一点，我前边头皮发麻，我给你讲到部长，院长我都不会发麻，我很爽，讲到这个女人，易经讲女人我就很紧张。长女呢居二女位，大女儿住到二女儿位置，好好的大女儿位置不去住，住到二女儿的位置。
 
-- 第一个，如果这个女孩子当官，当老师的，就是在公家单位做事儿的，官运不前。
-- 第二说如果考公家单位，科甲顺畅，高中。好，云中燕传说科甲高中。
-- 第三个，大女儿住到二女儿的位置，婚姻就是什么？婚姻有问题，婚姻要延后五年。你看她流年，如果24岁红鸾星动，要29岁，低了下去。如果她是14到23岁中间有红鸾星，结果一算，那结果就住在家女儿位置，一定家有什么，二妻。
-- 家人和禄，家人一定很和禄，有人来卜风火家人的时候，女孩子住在这里，代表大女儿跟家处的非常的和禄。
-- 但是第五个呢，妇女病比较多，家人卦，为什么？带，带在水边，怎么那么多水出来，带。不好意思，可是易经是这个意思。
+- 第一个，如果这个女孩子当官、当老师的，就是在公家单位做事儿的，官运不前。
+- 第二个，如果考公家单位，科甲顺畅，高中。好，云中燕传说科甲高中。
+- 第三个，大女儿住到二女儿的位置，婚姻就是什么？婚姻有问题，婚姻要延后五年。你看她流年，如果24岁红鸾星动，要29岁，delay下去。如果她是14到23岁中间有红鸾星，结果一算，那结果就住在家女儿位置，一定家有什么，二妻。
+- 第四个，家人和睦，家人一定很和睦，有人来卜风火家人的时候，女孩子住在这里，代表大女儿跟家处的非常的和睦。
+- 第五个，妇女病比较多，家人卦，为什么？带，带在水边，怎么那么多水出来，不好意思，可是易经是这个意思。
 
 ### （五）火泽睽　[䷥]
 
 #### 1.天机道
 
-火泽睽，睽卦，睽卦既家人卦，为什么老是这个家人卦很好，家里面人和禄，家庭和禄就游戏结束了，天地就停止了。这个睽卦是讲家道如果穷禄，家道穷禄的时候一定会乖违，家里面人分开来，家道中落。所以很多人他就犯法或者做什么，或者跟家里面人都不来往，一个人跑出来，就是家道衰落。
+火泽睽，睽卦，睽卦既家人卦，为什么老是这个家人卦很好，家里面人和睦，家庭和睦就游戏结束了，天地就停止了。这个睽卦是讲家道如果穷落，家道穷落的时候一定会乖违，家里面人分开来，家道中落。所以很多人他就犯法或者做什么，或者跟家里面人都不来往，一个人跑出来，就是家道衰落。
 
-那这个睽的意思，如果你风火家人很和禄，就不会进入睽卦，一直在家人卦当中。那你如果没落下去，家道好的没问题，没落下去，这个睽讲没落，没落的话就会造成家里面乖违，家里面都各奔东西，没有人在家里面治理，因为家道中落下去，一定会有乖违的现象。反过来你看人家乖违，你就知道他家道落下去，了解我意思吧。
+那这个睽的意思，如果你风火家人很和睦，就不会进入睽卦，一直在家人卦当中。那你如果没落下去，家道好的没问题，没落下去，这个**睽讲没落**，没落的话就会造成家里面乖违，家里面都各奔东西，没有人在家里面治理，因为家道中落下去，一定会有乖违的现象。反过来你看人家乖违，你就知道他家道落下去，了解我意思吧。
 
 你把他手拿起来一看，乾宫，坎宫都平了，家道就落下去。这个卦呢，火在上面，泽在下面，火在泽在上面，这个火性是往上的，泽性是润下的，这两个字是性完全相反的，不会融合在-起，自然这个象就把它变成睽，完全是背道而驰，相反的。后面我们会介绍用睽之道。
