--- a/CURRENT/熊逸讲透《资治通鉴》第一辑_011-020.md
+++ b/CURRENT/熊逸讲透《资治通鉴》第一辑_011-020.md
@@ -1,6 +1,6 @@
 ---
 title: 熊逸讲透《资治通鉴》第一辑_011-020
-date: 2023-05-15
+date: 2023-11-05
 categories:
    - 历史政治
    - 中国历史
@@ -13,4 +13,140 @@ tags:
 本书为第一辑，内容涵盖《资治通鉴》周纪一、周纪二，以250个问题为抓手，展开一幅别开生面的历史画卷。
 <!-- more -->
 
-## 一、
+## 一、战国从那一年算起
+
+上一讲留下了一个问题：假如智瑶当初没有说过“水可以灭国”那句话，韩康子和魏桓子还会不会果断反叛呢？或者说，智瑶真的有能力复制普阳经验，
+借汾水和绛水摧毁韩、魏两家的两座重镇吗？
+
+我们读历史，通常不会在这种细节上产生怀疑，而熟悉地理的人就会有不同的看法。
+
+《水经注》作为经典的地理学专著，认为引汾水灌安邑大概还算可行，然而引水灌平阳恐怕不可能。如果《水经注》的怀疑能够成立的话，显然韩康子和魏桓子在车上搞小动作的事情也就站不住脚了。
+
+### （一）考据和寓言
+
+该怎样应对《水经注》提出的质疑，古代学者们可有得忙了。《资治通鉴》有一个很经典的注释本一胡三省的《资治通鉴音注》，虽然书名叫“音注”，其实注释的范围宽广得多，尤其对官制和地理的注释特别详尽。胡三省生活在宋末元初，和文天祥同榜进士，入元之后不再做官，闭门注释《资治通鉴》。
+
+胡三省的意见是：丽道元根本就没去过平阳、安邑那些地方，相关的地理知识全是道听途说来的，再说郦道元是北魏人，从春秋末年到北魏，经历了那么多年，河流有过改道难道不是很正常吗？就算北魏时代的绛水没法去灌平阳城，但并不能因此证明智瑶当年也做不到。为了加强自己的说法，胡三省援引唐代地理学经典《括地志》。
+
+《括地志》对绎水有一段描写，最后说络水可以引流来灌平阳城。更重要的是，《括地志》[^1]是唐太宗的第四个儿子魏王李泰主持编修的，李泰既受太宗皇帝的宠
+爱，又有能力罗致全天下的知名学者合作编书，所以这部书的考据准确性肯定比《水经注》强。援引《括地志》来证伪《水经注》，显然合情合理。
+
+但是，我们还有必要想到一个背景知识，那就是胡三省在写《资治通鉴音注》的时候，困处穷乡僻壤，手边能够利用的资料很少。如果我们较一下真，翻出《括地志》的原文，就会发现里边非但没有提过绛水可以灌平阳城，就连对绛水的介绍文字都是照抄《水经注》的。
+
+显然，魏王李泰和他的名家班底并不像胡三省所以为的那么靠谱。胡三省是怎么犯的错呢？其实很简单，他引的那段《括地志》并不是从《括地志》的原文直接引过来的，而是从《史记正义》转引来的。《史记正义》在引述了《括地志》的内容之后，加了一句点评，说可以引绛水灌平阳城。胡三省把这句话当成《括地志》的原文了。
+
+不只是胡三省一个人犯这个错，后人还会接二连三犯这个错。比如明朝学者严衍和第子谈允厚花了30年时间为《资治通鉴》拾遗补缺，订正胡三省的注释，写成一部《资治通鉴补》，但在汾水和绛水的问题上通篇照抄胡三省，把胡三省的错误也一并抄进去了。
+
+**古人抄书抄错的陷阱是读书很容易遇到的，可见踏踏实实读原典有多重要。**
+
+问题依然没有解决。到了清代，考据专家阎若旧事重提。这位阎若写过一部惊天动地的书，叫作《尚书古文疏证》[^2]，把历代奉为经典的《古文尚书》一脚踢下神坛（我在《熊逸书院》有过介绍）。
+
+正是在这部书里，阎若回忆自己途经太原的时候，顾炎武向他称道朱谋（han）的《水经注》是“三百年一部书”，很了不起，但自己在读过之后，很不以为然，然后顺带提到自己曾经亲身往来于平阳一带，从亲眼所见的山川形势顿悟《资治通鉴》对汾水和水的记载并没有错，大家之所以有怀疑，只是因为理解得太机械了，所谓汾水可以灌安邑，水可以灌平阳，属于互文见义，概言水的攻击力而已。
+
+那么，阎若究竟说对了吗？也很难讲。无论如何，韩康子和魏桓子在车上的小动作和心理活动未必就是历史的实录，而更像是后人的瑞摩和想像。
+
+人的心理与天然会用故事架构来理解世界，总会把碎片化的资讯自觉不自觉地编织成一个首尾呼应、细节生动鲜活的故事。故事性的历史不但特别容易打动人心，也特别容易给人教益。相比之下，严谨性反而没有那么重要。
+
+**我们读历史，尤其是时代久远的历史，既要保持考据家的警醒，也要保持一种小孩子读童话寓言的心态。**
+
+### （二）名与实先熟后
+
+晋阳之战结束，韩、赵、魏三家瓜分了智家的土地，这是一个标志性的事件。在一些学者看来，这一年，也就是公元前453年，就是战国时代的开始。有一种常见的说法，认为“三家分普”标志着战国时代的开始，但疑点在于，所谓“三家分晋”，可以有两个事件。
+
+实质上的“三家分普”，主要就是韩、赵、魏三家瓜分了智家的土地，毕竟晋国和晋君早就名存实亡了。而名义上的“"三家分晋”，发生在《资治通鉴》的起始年，也就是公元前403年，周威烈王正式把韩、赵、魏三家封为诸侯。所以，有人以公元前453年作为战国时代的开始，也有人以公元前403年作为战国时代的开始，两者相差半个世纪。
+
+事实上，战国时代到底从哪一年算起，还有另外的说法，今天比较通行的是司马迁的说法，定在公元前475年，比普阳反击战还早22年以公元前453年，也就是晋阳反击战的那一年作为战国始年的，首推西汉学者刘向编订的《战国策》，毕竟“战国”作为一个时代概念就是从《战国策》这个书名来的。
+
+司马光当然不会认同这样的断代方式，因为在他看来，“名”比“实”重要得多，只要周天子不予认可，韩、赵、魏就算真的瓜分了晋国，也不过是乱臣贼子，人人得而诛之。
+
+**《资治通鉴》以公元前403年作为开端，暗示出所谓战国时代，是以周天子授予韩、赵、魏诸侯地位为开始的，对于晋阳之战，仅仅作为追叙的内容。**
+
+> 三家分智氏之田。赵襄子漆智伯之头，以为饮器
+
+从普阳反击战到名义上的“三家分普”，这50年间到底发生了什么，《资治通鉴》仍然报以追叙的口吻。需要追叙的第一件事，就是豫让对赵无恤的行刺。
+
+话说韩、赵、魏三家瓜分了智家的土地之后，赵无恤因为恨透了智瑙，把他的头骨当作酒壶来用。这已经算是很人道的做法了，因为在其他史料的记载里，智瑶是被虐杀的，死得很惨，他的头骨被赵无恤当成便壶。
+
+**恨意才是人类最强大的情感力量，但是，温良恭俭让的司马光仅仅采信了最温和的记载。**
+
+还有一则史料，看上去是司马光最应该采信的，却偏偏被无视了，这就是晋阳战后的论功行赏。赵家的首功之臣会是谁呢？我想，任何人都会在第一时间想到张孟谈。但是，出乎所有人的意料，赵无恤认为高赫的功劳最大，所以给高赫的赏赐最多。
+
+你也许已经不记得高赫是谁了，这很正常，因为他确实很没有存在感。所以当高赫受赏，张孟谈第一个不服气，说晋阳之难，大家或多或少都有功劳，只有高赫。
+
+为什么把他推在第一位呢？从管理学的角度上石，张孟谈显然只是站在员工的角度，而没有站在领导的角度考虑问题。赵无恤给出的理由非常充足：“在局面最艰险的时候，眼看晋阳城就要失守了，我自己也要丧命了，你们所有人都怠慢了对我这位主君的礼数，依然不失君臣之礼的就只有高赫一个人，所以我才把他定为首功之臣。"
+
+在《吕氏春秋》的版本里，后边还附了孔子的一段评语，赞美赵无恤赏罚得当，然只赏了一个人，却为天下人立了一个表率。正因为赵无恤赏罚得当，才能打赢晋阳之战，为赵家打出一片大好基业。
+
+当然，这话并不真是孔子说的，因为在赵无恤论功行赏的时候，孔子早已经过世，上述这段记载，在很多基本史料里边反复出现，司马光肯定不会漏看，而这段记载所反应出来的价值观，恰好正是司马光特别推崇的价值观。
+
+那么，《资治通鉴》里边为什么完全看不到高赫的身影呢？你可以试若瑞摩一下司马光的想法。
+
+## 二、司马光为什么不语怪力乱神
+
+上一讲谈到，围城之际坚持以君臣之礼对待赵无恤的高赫，看上去很符合司马光的价值观，但《资治通鉴》偏偏只字未提，这到底是为什么呢？又为什么《史记》会讲，《资治通鉴》却不会讲呢？
+
+### （一）立场决定叙述方式
+
+原因倒也不难推想，因为站在儒家本位礼的规范应该是“君君臣臣父父子子”，那么相应地，如果“君不君”，就难免“臣不臣”，如果“父不交”，就难免“子不子”。
+
+赵无恤虽然是赵氏家族的宗主，是主君的身份，而对于晋国的国君来说，他的身份就变成了臣子，有自己的一整套责任和义务。赵无恤既然对于国君已经“臣不臣”了，那么本着“己所不欲，勿施于人”的原则，也不该要求自己的臣子以传统的责任和义务侍奉自己。所以，赵无恤以高赫为首功之臣，是一桩很荒唐的事情，完全没法自圆其说。
+
+**在《资治通鉴》的叙事里边，虽然相对于智瑶，赵无恤属于正面形象，但相对于儒家极力捍卫的宗法传统，赵无恤只是一个乱臣贼子。**
+
+但为什么《史记》就可以记载高赫的事迹呢？
+
+因为司马迁不但没有儒家包，而且对赵氏家族很有好感，把赵无恤的经历写成了一个底层少年逆袭上流社会的成功故事，以至于那些侵略扩张也好，阴谋诡计也好，瓜分母国也好，都被打扮成了天意。所以，虽然同样记载普阳之战的前前后后，但《史记》和《资治通鉴》给人的感受然不同。
+
+《史记》的相关记载集中在《赵世家》，《赵世家》顾名思义，讲的是赵氏家族的兴亡史。在司马迁的笔下，赵氏家族传到赵无恤的父亲赵简子这一代，怪力乱神的事件忽然多了起来。
+
+先是赵简子得了一种怪病，一连昏迷了5天，家臣们都很担心，但神医扁鹊看过之后，竟然完全不当回事，说以前秦穆公出现过同样的症状，7天之后自然就醒了，醒来就说自己这些天见到了天帝，听天帝亲口描述了未来。秦穆公的臣子赶紧把这些预言记录在案，后来预言果然一一应验了。
+
+所以，谁都不用替赵简子担心，不出3天他就会醒过来，醒来之后也一定会有重要的话说。
+
+果然过了两天半，赵简子醒过来了，说自已这些天去了天帝那里，和很多神灵在天界游乐，欣赏着人间听不到的音乐，非常快乐。自己还射死了一头熊和一头罴（pi）。天帝很高兴，赐给自己两只竹筐，每只竹筐还都有个配套的小筐。自己还注意到，天帝身边站着一个小男孩。后来，天帝交给自己一只翟（di）犬，也就是翟这个地方出产的狗，然后附
+说：“等你儿子长大了，就把这只狗交给他。”
+
+天帝又讲了很多预言，预言了普国再传7代就会灭亡，到时候自己会给赵简子的七世孙选一位血统高贵的配偶。赵简子一边讲，家臣董安于一边做笔记，要把这些重要的天启保存下来。后来有一天，赵简子出门，遇到有人拦路求见。赵简子想起来，这个人在自己的梦里出现过，自己甚至还记得他的名字。
+
+来人自称天使，是专程给赵简子解梦来的。天使说，赵简子射死一熊一黑，意思是，天帝要他灭掉晋国的两大家族。竹筐的涵义是，赵简子的儿子将要在翟这个地方攻占两个子姓国家。至于翟犬，那是代国的祖先，赵简子的儿子将来会占有代国。
+
+天使的这些话，又被记录在案了。但怪事还没有完，又有一天，一个叫姑布子卿的相面大师来见赵简子，赵简子把儿子们都叫来，请大师相面。姑布子卿相完一轮，说：“您这些儿子将来没一个能当将军。”赵简子很紧张：“难道我们赵家要灭亡了吗？”姑布子卿说：“刚刚我在半道上见到一个男孩子，应该也是您的儿子吧？”没错，这个孩子就是赵无恤，只有他才有将军之相。
+
+赵简子很不理解，说赵无恤的母亲出身卑贱，只是翟地的一名女。姑布子卿给出了一句地有声的回答，原话是：“天所授，虽贱必贵”。这样的观点，在宗法传统下显得特别有革命性，它意味着身份社会的根基发生了动摇，卑贱的人也有机会成就大业，赢得尊贵的地位。虽然在实际上这是由能力决定的，但能力还需要隐藏在天意的背后，借着天意来给能力张目。
+
+从此以后，赵简子开始重视起这个"虽贱必贵”的儿子，很快发现、他果然是自己所有的儿子当中最出色的一个。但是，到底要谁来做自己的继承人，还需要仔细考。赵简子宣布，说自己在常山藏了一件宝贝，谁先找到这件宝贝，谁就会得到重赏。结果各位公子都没找到，只有赵无恤虽然也两手空空地回来，却说自己找到了宝贝。
+
+这件宝贝到底是什么呢？赵无恤说：“登上常山向下俯瞰，眼前正是代国的土地。我发现，我们应该吞并代国”。这话说到了赵简子的心坎里。后来赵简子废掉长子伯鲁，立赵无恤作为继承人，因为他看出来，在自己的所有儿子当中，只有赵无恤既懂得，也有能力实现自己的战略规划。
+
+等到赵简子过世，赵无恤连丧期都没有服满就对代国下手了。代国的国君是赵无恤的姐夫，这是一层很好利用的亲属关系。赵无恤只用了一场宴会就杀掉了代国国君一行人，顺势把代国收入囊中，应了赵简子的梦中预兆。虽然赵无恤的姐姐因此自杀，造成一场人伦惨剧，但这在家族扩张的历史上，在男人们的大局观里，只是一朵无声的浪花。
+
+当赵无恤躲避智瑶的攻击，准备赶往晋阳的时候，又发生了一桩怪事：有个叫原过的家臣掉了队，在一处沼泽地带遇到了三个只看得见上半身的怪人。
+
+这完全就是莎士比亚的名剧《麦克白》里边三女巫现身的桥段，但《史记》郑重其事地记载说：这三个人给了原过一根封闭起来的竹筒，要他转交给赵无恤。后来赵无恤斋戒三天，亲自剖开竹筒，取出了一封用红颜色写成的信，信上说自己是霍泰山山神的使者，将在三月丙戌日帮助赵无恤消灭智氏家族，以后还会给你们赵家好多土地。当然，这个忙不能白帮，你必须在百邑这个地方给我们三位天使修建察祀的场所，好好供养。
+
+我们会发现，无论是天帝、山神还是神使，都没有什么正义感，对杀人和侵略很无所谓。在当时的观念里，山神和河神都是周边大家族的保护神，并且提供保护一定要收保护费。人和神互利互惠，有时候还会互相算计，谁也不比谁高尚。在打赢了晋阳反击战，瓜分了智氏家族的土地之后，赵无恤如约在百邑修建神庙，供奉三位天使，还派原过主持对霍泰山的祭祀。
+
+### （二）从怪力乱神到人间政治
+
+《史记》讲的这些怪力乱神倒也有点现实的影子，唐朝的地理学名著《元和郡县图志》就记载过榆次县东九里外有一座原过祠，俗称原公祠，就是当初原过为了祭祀三位神使而修建的。
+
+质疑的声音当然也有，最有趣的就是东汉学者王充在《论衡》里边提出的意见。《论衡》有一章叫《纪妖》，专门分析历史上著名的妖异事件，努力给出合理的解释。《史记·赵世家》的上述记载就被《论衡》全文照录，然后依次批判。王充认为，赵简子梦到的肯定不是天帝，因为梦中的事物只有象征意义，比如梦见上楼、登山，在现实中往往可以做官。这虽然没错，但楼台和山陵本身并不是官位，所以梦见的天帝肯定也不是天帝本尊。至于原过见到的神使，不可能真是山神的使者。
+
+道理很简单：山是大地的一部分，就好像骨骼是人体的一部分，骨骼怎么可能成神呢？
+
+就算霍泰山真有山神，也应该长得像山才对，就像鬼长得像人。所以原过见到的，只不过是妖气幻化成的人形而已。王充已经算是他所在的时代里最有无神论精神的学者了，但那毕竟是东汉，一个迷信盛行的时代。等同样的材料到了司马光手里，直接被大刀阔斧删得精光。
+
+因为一来“子不语怪力乱神”，儒家的标杆不能动摇；二来《史记》那些怪力乱神分明犯了一个严重的政治错误：替”三家分普”的行为洗白，把一幕礼崩乐坏的悲剧，写成了赵氏家族的发家史和成功学，用神意给叛乱和侵略背书。
+
+司马光觉得，记述这段历史，不该让人去学习赵简子和赵无恤的成功经验，而要让人汲取智瑶的失败教训才对。以“三家分晋”作为《资治通鉴》的开端，是要警醒世人的。
+
+**只有当智瑶的失败是"人”的失败，相关的一切经验教训才有价值，历史才可以成为现实的借鉴。**
+
+相反，如果用《史记·赵世家》来做借鉴的话，天知道天帝和山神是怎么想的。于是，这些毫无道德意识的怪力乱神，就这样被《资治通鉴》果断清除掉了。
+
+**时代的演变就是这样，历史事件会被不断地重新表述，历史观也会被不断地重新建构。每个时代的人们，都是在特定的观念框架里理解历史的。**
+
+下一讲，我们重点说说历史上很有名的那个刺客——豫让替智瑶复仇行刺赵无恤的故事。
+
+[^1]:《括地志辑校》，中华书局，1980年，第56页。《水经注校证》，中华书局，2007年，第166页。
+[^2]:《尚书古文疏证》，上海古籍出版社，影印乾隆十年着西堂刻本，1987，第764~766页。
