--- a/UPLD/倪海厦_人纪_针灸_第一章_针灸的使用时机.md
+++ b/UPLD/倪海厦_人纪_针灸_第一章_针灸的使用时机.md
@@ -24,51 +24,69 @@ tags:
 
 ### （一）针灸的使用时机
 
-遇到气血大虚、重病、刚刚失过很多血、病患完全没有元气的时候，这时候我们不下针。另外，刚做完爱，行完房事后，也不针。时机不好、运动过后、大汗后也不针。喝酒后，不针。体力不够，不下针。针可以用在所有的病上面，从感冒到癌症都可以。针灸及中药都是可以独立成为中医的一个部门的。所以，此时我们不谈中药，只谈针灸来治病。而日后我在教各位《伤寒》《金
-匮》时，大家也一样把针灸忘掉，全用中药来治病。
+遇到气血大虚、重病、刚刚失过很多血、病患完全没有元气的时候，这时候我们不下针。另外，刚做完爱，行完房事后，也不针。时机不好、运动过后、大汗后也不针。喝酒后，不针。体力不够，不下针。针可以用在所有的病上面，从感冒到癌症都可以。针灸及中药都是可以独立成为中医的一个部门的。所以，此时我们不谈中药，只谈针灸来治病。而日后我在教各位《伤寒》《金匮》时，大家也一样把针灸忘掉，全用中药来治病。
 
-灸呢？我们叫 JIU，就是“久”下加一个“火”字。用灸时就必须用艾绒，为什么要用这个艾草，在古代，部队里没有西医，只有中医，那个时候都是中医。那部队沿路开拔的时候最重要的就是补给，除了食物以外，最重要的是水，没有水的话部队就不能行动。中医如何去找这个水呢？艾草它的生命力很强，再艰难的环境下都可以找得到它。艾有一个特性，就是向下，艾会自己去找水,找到水以后烟就往上升。如果部队要找水，就叫阿兵哥将艾草摊在土里烧，这时叫人到各处去看看，看到地上有烟冒出来的地方，那个地方下面就有水。为什么要灸？当针力不足的地方，我们就会用到灸，气血大虚时，可用灸的方式处理。
+灸就是“久”下加一个“火”字。用灸时就必须用艾绒，为什么要用这个艾草，在古代，部队里没有西医，只有中医，那个时候都是中医。那部队沿路开拔的时候最重要的就是补给，除了食物以外，最重要的是水，没有水的话部队就不能行动。中医如何去找这个水呢？艾草它的生命力很强，再艰难的环境下都可以找得到它。**艾有一个特性，就是向下**，艾会自己去找水,找到水以后烟就往上升。如果部队要找水，就叫阿兵哥将艾草摊在土里烧，这时叫人到各处去看看，看到地上有烟冒出来的地方，那个地方下面就有水。为什么要灸？当针力不足的地方，我们就会用到灸，气血大虚时，可用灸的方式处理。
 
 #### 1.隔姜灸
 
-我们有几种灸法，最普遍的就是“隔姜灸”。我们隔姜灸就是切一片大概五十元大小的生姜，先戳几个洞，我示范给诸位看。拿一些
-艾绒捏成金字塔状，再将它放在生姜上面，这样一个单位叫“一壮”。在灸的时候，这个生姜片不用换。不要灸五壮，就换五片生姜，烧到温热，不用烧到很烫。感觉温热，不用很烫时就换一壮，在旁边放一个水盆，未烧完的艾就丢到水里熄灭掉。若不放水在里面，碗就会烧破。
+我们有几种灸法，最普遍的就是“隔姜灸”。我们隔姜灸就是切一片大概五十元大小的生姜，先戳几个洞，我示范给诸位看。拿一些艾绒捏成金字塔状，再将它放在生姜上面，这样一个单位叫“一壮”。在灸的时候，这个生姜片不用换。不要灸五壮，就换五片生姜，烧到温热，不用烧到很烫。**感觉温热**，不用很烫时就换一壮，在旁边放一个水盆，未烧完的艾就丢到水里熄灭掉。若不放水在里面，碗就会烧破。
 
-灸的时候，灸单数不灸双数，艾为纯阳，取阳数。若灸后起了水泡，就从皮肤旁边用消毒过的针刺一个小洞，把水慢按排出来。不要把皮肤撕掉免得造成疤痕，洒上一些硫磺粉及大黄粉就可以了。因为艾本性向下，它的本性是属阳的。譬如说，不论是什么病，灸膏肓穴灸百壮，无所不疗。灸到口干舌燥都没有关系，小便都会有艾草味。
+灸的时候，**灸单数不灸双数，艾为纯阳，取阳数。** 若灸后起了水泡，就从皮肤旁边用消毒过的针刺一个小洞，把水慢按排出来。不要把皮肤撕掉免得造成疤痕，洒上一些硫磺粉及大黄粉就可以了。因为艾本性向下，它的本性是属阳的。譬如说，不论是什么病，**灸膏肓穴灸百壮，无所不疗。** 灸到口干舌燥都没有关系，小便都会有艾草味。
 
 #### 2.隔盐灸
 
-第二个灸法是“隔盐灸”，我们在灸的时候，用盐巴填满神阙穴（就是肚脐），再放艾绒上去灸。先将盐炒熟。精盐不能用，要用青盐，要等盐变温一点了，凉了，再倒在神阙穴上，否则会把肚皮烧坏了。古病人下利时不管是寒利或热利（只要是食物没有消化就是寒，热利的话味道会很臭），灸神阙就可以了。
+第二个灸法是“隔盐灸”，我们在灸的时候，用盐巴填满**神阙穴（就是肚脐）**，再放艾绒上去灸。先将盐炒熟。精盐不能用，要用青盐，要等盐变温一点了，凉了，再倒在神阙穴上，否则会把肚皮烧坏了。古病人下利时不管是寒利或热利（**只要是食物没有消化就是寒，热利的话味道会很臭**），灸神阙就可以了。
+
+灸针对寒症比较多。
 
 #### 3.隔蒜灸
 
-第三个灸法叫“隔蒜灸”，灸一个就是一壮。当久咳的时候，因蒜是白色的，辛辣色白，才能入肺，放在舌上。因为舌为心表，把舌
-头往外伸，灸后心脏力量加强。心和肺最接近，这时候我们去灸，咳嗽就会好。那你不要拿生姜，要用蒜，肺的问题，我们要用隔蒜灸。
+第三个灸法叫“隔蒜灸”，灸一个就是一壮。**当久咳的时候**，因蒜是白色的，辛辣色白，才能入肺，放在舌上。因为舌为心表，把舌头往外伸，灸后心脏力量加强。心和肺最接近，这时候我们去灸，咳嗽就会好。那你不要拿生姜，要用蒜，肺的问题，我们要用隔蒜灸。
 
-灸的用途非常广，比如说被毒蛇咬伤、蝎子、蜘蛛咬伤，任何的毒物咬伤、破伤风都可以用灸。什么是破伤风，比如说今天你手上有伤口，又去整理生锈的铁钉，在临床上面怎么做呢？有个病人来找我，手指头红肿，从手指头一路红到手上。我们在介绍中医的时候，我会慢慢把中医的原则跟诸位讲，我们有两种方式，可以知道病人的病情到底是越来越严重，还是越来越好。当病进时，是由四肢末梢往身上走，就像我刚才讲的，如手有伤口被感染或被毒蛇咬到，这时会感到毒往身上走。而病退时，就会由身上往四肢走。譬如，原来是病在肩，第二天醒来，病虽还没好，但我的肩不痛了。但是痛到手臂上了，这就是病在退了。
+灸的用途非常广，比如说被毒蛇咬伤、蝎子、蜘蛛咬伤，任何的毒物咬伤、破伤风都可以用灸。什么是破伤风，比如说今天你手上有伤口，又去整理生锈的铁钉，在临床上面怎么做呢？有个病人来找我，手指头红肿，从手指头一路红到手上。我们在介绍中医的时候，我会慢慢把中医的原则跟诸位讲，**我们有两种方式，可以知道病人的病情到底是越来越严重，还是越来越好。**
 
-当病在退的时，处方不能改，所针的穴道也不能改，要等它病好了为止。若病仍在进时，就表示你的处方、穴道错了!这时你就应该想想怎么去解决它。当这个病在进时，像病人手指头破伤风红肿，我一看，针都不用下，用隔蒜灸。它（病）走到这边的时候，我们在这边的头上面灸，病人手粉红色，很痛，痛到不能动，我就在头尾灸两壮，灸完两壮后才几分钟而已，就在退了，退到手掌心，退到劳宫时，就知道病离开心脏。到后来我就没有帮他灸了，因为艾草在烧起来的时候，很像大麻的味道。我在美国的诊
-所，一烧起来的时候，常有人说：有人在抽大麻，所以我没有再帮他灸，而把窗户打开，透透空气，然后隔两天病人回来，那天从诊所走到停车场，他手都不痛了，也可以开车了。来的时候是一只手开车的，回去时可以两手开车了。
+- 当病进时，是由四肢末梢往身上走，就像我刚才讲的，如手有伤口被感染或被毒蛇咬到，这时会感到毒往身上走。
+- 而病退时，就会由身上往四肢走。譬如，原来是病在肩，第二天醒来，病虽还没好，但我的肩不痛了。但是痛到手臂上了，这就是病在退了。
+
+当病在退的时，处方不能改，所针的穴道也不能改，要等它病好了为止。若病仍在进时，就表示你的处方、穴道错了!这时你就应该想想怎么去解决它。当这个病在进时，像病人手指头破伤风红肿，我一看，针都不用下，用隔蒜灸。它（病）走到这边的时候，我们在这边的头上面灸，病人手粉红色，很痛，痛到不能动，我就在头尾灸两壮，灸完两壮后才几分钟而已，就在退了，退到手掌心，**退到劳宫时，就知道病离开心脏。** 到后来我就没有帮他灸了，因为艾草在烧起来的时候，很像大麻的味道。我在美国的诊所，一烧起来的时候，常有人说：有人在抽大麻，所以我没有再帮他灸，而把窗户打开，透透空气，然后隔两天病人回来，那天从诊所走到停车场，他手都不痛了，也可以开车了。来的时候是一只手开车的，回去时可以两手开车了。
 
 如果说，你觉得打破伤风针很好，打疫苗很好，那就去打吧，实际上没什么大帮助，破伤风时，连药也不用吃针也不用下，用灸就可以好，所以我们用灸的机会很多。还有疱疹、腰蛇、锦蛇。长这样一圈，看起来红红的一小粒，长疱疹的时候，我们有两种烧它的方式，如病人疱疹是长这样子的，在疱疹的头尾隔姜去灸他，它就不会再蔓延了，过两天，疱疹就变短了。我们还是一样在疱疹的头尾灸，慢慢去灸，反正就是把疱疹包围起来。就是一种方法。
 
 还有一种方法，过去古代看到疱疹，就去拿蜘蛛网，把这蜘蛛网平摊在疱疹上面，因为蜘蛛网很粘，用薄薄的粘一层，瞬间一烧就烧掉，烧完后，五天到一个星期，疱疹就治好了。疱疹比米粒还小，像五味子，粉红色，很痛。现在不要去拿蜘蛛网了，可以用干棉花，不要用有酒精的棉花。但棉花粘不住啊，它不像蜘蛛网，没有那个胶质，所以我们放点凡士林在上面，因为目的是烧嘛。如果是你的爸爸妈妈就轻轻一烧，烧完就会整个干掉，如果是你的仇人，用多一点棉花烧。我们平常用全蝎，把它烤干，你不要拿蝎子给他吃，全蝎粉去药房买也可以买到。但过去是把蝎子烧烤成金黄色，但现在药房已有全蝎粉，味道很强，你可以放到胶囊里面去，可以吃八到十颗。所以疱疹很好治。
 
-一般热症不用灸法。当感冒发烧，病人已经很热了，不要灸。流汗多的地方不灸，手掌汗比较多，也不灸。津液很多的地方不要灸，眼睛不要灸，阴部不灸。病人有痔疮时，已经是热了，也不能灸。针灸有些禁忌。有一个歌诀：“针而勿灸灸勿针，针经为此常叮咛。庸医针灸一齐施，徒施患者炮烙刑。”过去呢，针就是针，灸就是灸，历代就一直就是这样子。但从文化大革命以后，变成哪里痛针哪里。要真是如此简单，就不用读针灸啦!而且效果又不好，手法又变得开始花哨了。《针灸大成》[^1] 是我们的教科书，书上所说的地方都是：左病右治，右病左治。意思就是叫我们对称治疗。但像刚才带状疱疹当然是在天应穴[^2]上灸。临床下针是左病右治、右病左治。但大陆的中医没有看过这种书，而且在文革烧掉了好多好书，好的中医也都给斗争掉了。所以他们治不好病，只好变些花哨的手法来吸引病人，变成针上头放个艾绒，让病人更痛苦。古有名训，针就是针，炙就是灸，我们要分开使用。
+**一般热症不用灸法。** 当感冒发烧，病人已经很热了，不要灸。**流汗多的地方不灸**，手掌汗比较多，也不灸。津液很多的地方不要灸，眼睛不要灸，阴部不灸。病人有痔疮时，已经是热了，也不能灸。针灸有些禁忌。有一个歌诀：
+
+> 针而勿灸灸勿针，
+> 针经为此常叮咛。
+> 庸医针灸一齐施，
+> 徒施患者炮烙刑。
+
+过去呢，针就是针，灸就是灸，历代就一直就是这样子。但从文化大革命以后，变成哪里痛针哪里。要真是如此简单，就不用读针灸啦!而且效果又不好，手法又变得开始花哨了。《针灸大成》[^1] 是我们的教科书，书上所说的地方都是：
+
+**左病右治，右病左治。**
+
+意思就是叫我们对称治疗。但像刚才带状疱疹当然是在天应穴[^2]上灸。临床下针是左病右治、右病左治。但大陆的中医没有看过这种书，而且在文革烧掉了好多好书，好的中医也都给斗争掉了。所以他们治不好病，只好变些花哨的手法来吸引病人，变成针上头放个艾绒，让病人更痛苦。古有名训，针就是针，炙就是灸，我们要分开使用。
 
 #### 4.米粒灸
 
-另外，补充一点。我们还有一个灸法是“米粒灸”。我们把一点点的艾绒，捏成像米粒一样大。用凡士林先涂在欲灸的穴道上，将它放在上面灸。用在什么地方呢，如鼻窦炎 、鸡眼 ，我们用香来点，灸三个、五个，就看病有多深。这是灸的大原则。痛灸到不痛止，不痛灸到痛止，这是原则，所谓“不痛灸到痛止”的意思是，一直灸直到当你碰到患部病根的时候，那儿开始产生了痛，对不对？就表示到了。那怎么知道“痛灸到不痛”，像“肿瘤”就是。在肿瘤痛 的地方一直灸，直到不痛的地方就停住。
+另外，补充一点。我们还有一个灸法是“米粒灸”。我们把一点点的艾绒，捏成像米粒一样大。用凡士林先涂在欲灸的穴道上，将它放在上面灸。用在什么地方呢，如鼻窦炎 、鸡眼 ，我们用香来点，灸三个、五个，就看病有多深。这是灸的大原则。
+
+**痛灸到不痛止，不痛灸到痛止，这是原则。**
+
+所谓“不痛灸到痛止”的意思是，一直灸直到当你碰到患部病根的时候，那儿开始产生了痛，对不对？就表示到了。那怎么知道“痛灸到不痛”，像“肿瘤”就是。在肿瘤痛的地方一直灸，直到不痛的地方就停住。
 
 最高明的医生，就是把病治好了，又不伤病人的元气。而西医的手术，即使宣称手术很成功，但这个刀开下去后的结果如何，你需要慢慢去体会它！若去开刀，还是会长回来的。当然，如果是你的情敌，叫他给西医开刀好了！
 
 ### （二）针灸的急救法
 
-我们再下来讲“针灸的急救方式”，我们可用在很多地方。当有人发病，昏迷 过去时，他可能是心脏病，也可能是中风，溺水。我们不管是什么原因，第一个先针“人中”，就是鼻子下方、嘴唇上方的水沟处，把它分三段，取上面三分之一处下针，下针时，针要斜刺往上，若没有针在手上呢，掐人中。
+我们再下来讲“针灸的急救方式”，我们可用在很多地方。当有人发病，昏迷 过去时，他可能是心脏病，也可能是中风，溺水。**我们不管是什么原因，第一个先针“人中”，** 就是鼻子下方、嘴唇上方的水沟处，把它分三段，取上面三分之一处下针，下针时，针要斜刺往上，若没有针在手上呢，掐人中。
 
-若仍未醒，第二个就是“十宣”放血。为什么叫“十宣”呢？就是在十只手指头的指尖放血。比较没有常识的人呢，都是一个一个手指尖放。一个一个下，太慢了，我们可以一次捉五个手指，针拿起来，一、二、三、四、五，一下子就刺完，五只指头一起挤放血。这是老师傅的手法。
+![02](https://preview.cloud.189.cn/image/imageAction?param=E77E98CB152915C1C0B9436AABA7390DBCF36D52794E84EC3600EF6613E2D052B65328E187DFAF8773D806D510E4BB78B35A0083FFC9F2F2297951774D58716A1E14F62FE1E9091C41FA5EA80C4493EDA1857B6DFFE89DDA8C0D85773438EAC4366A56D9D0E0F67E5066BC63CB902272)
 
-若仍未醒，再将脚的十个趾头尖放血。若还没醒，就再下“涌泉”穴。将脚掌一握起来，会看到“人”字纹，人字纹的纹头就是穴道。这是我们的急救大穴，你不要拿一个三寸针下去。若还不醒，就在“百会”放血。“百会穴”一般是放血用。我们不下针。当病人整个脸都是呈现红色时，就是刚中风，就在百会放血。百会穴怎么找呢？从额头往上到顶，再由两耳尖直上，两线相交的一点，再往后半寸，会摸到一个凹洞，就是百会穴。放血时，让病人躺下头靠着床沿往下垂，在百会放血后，病人会感到一阵清凉，凉到嘴巴，就可以讲话，凉到手脚，手脚就可以活动了。在急救时，管他有无执照，没有人会告你的，急救就去救。若碰到美女，就用嘴对嘴呼吸也可以。不要管太多！这是我们的急救方式。
+若仍未醒，**第二个就是“十宣”放血。** 为什么叫“十宣”呢？就是在十只手指头的指尖放血。比较没有常识的人呢，都是一个一个手指尖放。一个一个下，太慢了，我们可以一次捉五个手指，针拿起来，一、二、三、四、五，一下子就刺完，五只指头一起挤放血。这是老师傅的手法。
+
+若仍未醒，**再将脚的十个趾头尖放血。** 若还没醒，就再下**涌泉穴** 。将脚掌一握起来，会看到“人”字纹，人字纹的纹头就是穴道。这是我们的急救大穴，你不要拿一个三寸针下去。**若还不醒，就在“百会”放血。**“百会穴”一般是放血用,我们不下针。当病人整个脸都是呈现红色时，就是刚中风，就在百会放血。百会穴怎么找呢？从额头往上到顶，再由两耳尖直上，两线相交的一点，再往后半寸，会摸到一个凹洞，就是百会穴。放血时，让病人躺下头靠着床沿往下垂，在百会放血后，病人会感到一阵清凉，凉到嘴巴，就可以讲话，凉到手脚，手脚就可以活动了。在急救时，管他有无执照，没有人会告你的，急救就去救。若碰到美女，就用嘴对嘴呼吸也可以。不要管太多！这是我们的急救方式。
 
 ### （三）火罐的使用和时机
 
@@ -80,7 +98,7 @@ tags:
 
 我们用真空的拔火罐，火罐有不同的 size，用真空的来吸。我在介绍火罐，并没有介绍哪个厂商。火罐用的时候就要拿火罐枪将空气吸出来，拿的时候后面的尾巴一拔，气就放出来了。
 
-你们命很好，我们在学针灸时，是用点火的。当时，曾有个太太。不小心头发烧了一个大洞。火罐除了可以吸脓，还有瘀血，我们在活血化瘀的时候，比如膝盖扭伤 ，我们会在痛点放血，用火罐放血的时候看颜色，由黑变淡，就起罐。被竹子刺到或海胆刺到，都可以抽出来。有些地方不能拔火罐，例如乳中，否则乳头会流黄水出来。多汗的地方不上火罐，头部也不用火罐。在外科急性扭伤的时候用的很多，受伤时马上在扭到的地方上火罐。还有痔疮，现在是用放血针，刺完以后，就用火罐把它吸出来。西医的放血针做得很好，针尖呈三角形，很锐利，放完后就可以直接丢掉。待会我们介绍针时，再跟各位讲。这是笫一章的基本概念，我们休息一下!
+你们命很好，我们在学针灸时，是用点火的。当时，曾有个太太。不小心头发烧了一个大洞。火罐除了可以吸脓，还有瘀血，**我们在活血化瘀的时候，比如膝盖扭伤 ，我们会在痛点放血，用火罐放血的时候看颜色，由黑变淡，就起罐。** 被竹子刺到或海胆刺到，都可以抽出来。有些地方不能拔火罐，例如乳中，否则乳头会流黄水出来。多汗的地方不上火罐，头部也不用火罐。在外科急性扭伤的时候用的很多，受伤时马上在扭到的地方上火罐。还有痔疮，现在是用放血针，刺完以后，就用火罐把它吸出来。西医的放血针做得很好，针尖呈三角形，很锐利，放完后就可以直接丢掉。待会我们介绍针时，再跟各位讲。这是笫一章的基本概念，我们休息一下!
 
 ![笔记](https://preview.cloud.189.cn/image/imageAction?param=A3765EF273EA8E4F6F974FA6BF6DF0CDF4D31352C61C41332F0A9BBB3A9C123FDA2BD10AFB183FD9FB9FA66F3BAAA18988456B8BB98575218EA34C4A8D504EF4DAAC695A72D85791C3F0A280331AEDE5D2EF23B2256798732D554C7636E2DEF1657AC9427E05EABB47100256F09B9ED2)
 
